--- a/2-3主要实体法.md
+++ b/2-3主要实体法.md
@@ -276,33 +276,41 @@
         行政行为以无偿为原则，以有偿为例外。行政主体所追求的是国家和社会公共利益，其
         对公共利益的维护和分配，应当都是无偿的。当然，当特定行政相对人承担了特别公共负担，
         或分享了特殊公共利益时，则应是有偿的。
-（二）行政行为分类
-根据不同的标准，可以将行政行为分为不同的种类。
-    ①根据行政行为针对的对象可以把行政行为分为外部行政行为和内部行政行为；
-    ②根据行政行为的对象是否特定，可以分为抽象行政行为与具体行政行为；
-    ③根据行政行为受法律规范约束程度的不同可以分为羁束行政行为与自由裁量行政行为；
-    ④根据行政行为启动方式的不同可以分为依职权的行政行为与依申请的行政行为；
-    ⑤根据参与行政行为意思表示的主体是单方还是双方为标准可以分为单方行政行为与双方行政行为；
-    ⑥根据行政行为是否必须具备法定的形式为标准可以分为要式行政行为与非要式行政行为。
-（三）行政行为的法律效力【仙人居住的地方，公众都说是合法的，这点大家都是确定不更改的】
-        1.拘束力【仙居】
-        这是指行政行为具有法律规定的或行政机关所决定的法律效果，行政机关和行政相对人
-        都必须尊重并遵守之。行政机关有执行所作出行政行为的义务，行政相对人也必须履行行政
-        行为所规定的义务，而不能以这样或那样的借口予以推倭、拖延。
-        2.公定力【公合】
-        公定力是指行政主体在其职权范围内所为的行为，一经形成，在原则上即应推定为合法，
-        在未经法定机关通过法定程序撤销或宣布为无效之前，任何人不得否定其效力。
-        3.确定力【确定不更改】
-        确定力也称为不可变更力，是指行政行为已经作出，其内容非以法律程序不得随意变更
-        的效力。表现在两个方面：（1）对行政相对人的确定力。行政行为一经作出后，行政相对
-        人必须服从。（2）对行政主体的确定力。行政主体对自己所作的行政行为，也不得随意撤
-        销或变更。如果发现该行为确有法定的撤销变更理由，必须由有权的行政机关以法定程序撤
-        销或变更，并向行政相对人说明。
-        4.执行力
-        这是指行政行为生效后，行政主体有权采取一定手段，使行政行为的内容得以实现的效
-        力。当行政相对人不履行其应该履行的法定义务时，行政机关可依法强制其实现该义务的履
-        行。这种行政强制执行是由行政机关依职权行使行政权力的一种形式，不需要事先得到法院的判决。
-（四）主要的行政行为
+##（二）行政行为分类
+    根据不同的标准，可以将行政行为分为不同的种类。
+        ①根据行政行为针对的对象可以把行政行为分为外部行政行为和内部行政行为；
+        ②根据行政行为的对象是否特定，可以分为抽象行政行为与具体行政行为；
+        ③根据行政行为受法律规范约束程度的不同可以分为羁束行政行为与自由裁量行政行为；
+        ④根据行政行为启动方式的不同可以分为依职权的行政行为与依申请的行政行为；
+        ⑤根据参与行政行为意思表示的主体是单方还是双方为标准可以分为单方行政行为与双方行政行为；
+        ⑥根据行政行为是否必须具备法定的形式为标准可以分为要式行政行为与非要式行政行为。
+
+##### 行政行为依行为对象做标准，可以分为具体行政行为和抽象行政行为（×）
+    根据行政行为的对象是否特定，而不是行为对象做标准
+    行为对象：老人，小孩，这些都是行为对象，但是不是分类标准
+    行为对象是否特定：特定：特别规定的标准。就是说一种是特别规定的，而另外一种不是特别规定的。
+
+
+##（三）行政行为的法律效力【仙人居住的地方，公众都说是合法的，这点大家都是确定不更改的】
+### 1.拘束力【仙居】
+    这是指行政行为具有法律规定的或行政机关所决定的法律效果，行政机关和行政相对人
+    都必须尊重并遵守之。行政机关有执行所作出行政行为的义务，行政相对人也必须履行行政
+    行为所规定的义务，而不能以这样或那样的借口予以推倭、拖延。
+### 2.公定力【公合】
+    公定力是指行政主体在其职权范围内所为的行为，一经形成，在原则上即应推定为合法，
+    在未经法定机关通过法定程序撤销或宣布为无效之前，任何人不得否定其效力。
+### 3.确定力【确定不更改】
+    确定力也称为不可变更力，是指行政行为已经作出，其内容非以法律程序不得随意变更
+    的效力。表现在两个方面：（1）对行政相对人的确定力。行政行为一经作出后，行政相对
+    人必须服从。（2）对行政主体的确定力。行政主体对自己所作的行政行为，也不得随意撤
+    销或变更。如果发现该行为确有法定的撤销变更理由，必须由有权的行政机关以法定程序撤
+    销或变更，并向行政相对人说明。
+### 4.执行力
+    这是指行政行为生效后，行政主体有权采取一定手段，使行政行为的内容得以实现的效
+    力。当行政相对人不履行其应该履行的法定义务时，行政机关可依法强制其实现该义务的履
+    行。这种行政强制执行是由行政机关依职权行使行政权力的一种形式，不需要事先得到法院的判决。
+
+##（四）主要的行政行为
     1.行政立法，是指特定的国家机关依照法定权限和程序，制定、修改和废止有关行政管
     理方面的行政法规和规章等规范性文件的活动。
     2.行政许可，是指行政主体根据行政相对人的申请，通过颁发许可证或执照形式，依法
@@ -351,23 +359,25 @@
     3.对民事纠纷的仲裁、调解或者处理不服的；
     4.对国防、外交等国家行为不服的。
 
-（四）行政复议的管辖
-1.对县级以上地方各级人民政府工作部门的具体行政行为不服的，既可以向该部门的本
-级人民政府，也可以向上一级主管部门申请复议。
-对海关、金融、国税、外汇管理等实行垂直领导的行政机关和国家安全机关的具体行政行为不服的，
-向上一级主管部门申请行政复议。
-2.对地方各级人民政府的具体行政行为不服的，向上一级地方人民政府申请复议。
-对省、自治区、直辖市人民政府依法设立的【派出机构所属的县级地方人民政府的具体行政行为不服的，向该派出机关申请复议】。
-3.对国务院部门或者省、自治区、直辖市人民政府的具体行政行为不服的，由原作出机关复议。
-【对行政复议决定不服的，可以向人民法院提起行政诉讼；也可以向国务院申请裁决】。
-（四）行政复议程序
+##（四）行政复议的管辖
+    1.对县级以上地方各级人民政府工作部门的具体行政行为不服的，既可以向该部门的本级人民政府，也可以向上一级主管部门申请复议。
+    2对海关、金融、国税、外汇管理等实行垂直领导的行政机关和国家安全机关的具体行政行为不服的，向上一级主管部门申请行政复议。
+    3.对地方各级人民政府的具体行政行为不服的，向上一级地方人民政府申请复议。
+    4对省、自治区、直辖市人民政府依法设立的【派出机构所属的县级地方人民政府的具体行政行为不服的，向该派出机关申请复议】。
+    5.对国务院部门或者省、自治区、直辖市人民政府的具体行政行为不服的，由原作出机关复议。
+    【对行政复议决定不服的，可以向人民法院提起行政诉讼；也可以向国务院申请裁决】。
+
+
+
+##（四）行政复议程序
 行政复议程序包括以下几个环节：
     ①行政复议申请；
     ②行政复议的受理；
     ③行政复议的审理；
     ④作出复议决定。
-五、行政赔偿制度
-（一）行政赔偿的概念
+
+# 五、行政赔偿制度
+##（一）行政赔偿的概念
 行政赔偿，是指行政主体及其工作人员违法行使行政职权，侵犯行政相对人的合法权益
 造成损害，而依法必须承担的赔偿责任。它具有以下几层含义：
 首先，行政赔偿是国家的赔偿责任，【行政赔偿的责任主体是国家】，而不是行政机关及其
@@ -376,14 +386,16 @@
 再次，国家赔偿是【国家对行政机关及其工作人员】的侵权行为承担的赔偿责任。
 最后，行政赔偿是国家对其合法权益受到行政侵权行为损害的公民、法人或者其他组织
 承担的赔偿责任。
-（二）行政赔偿的赔偿范围
+
+##（二）行政赔偿的赔偿范围
 行政赔偿的范围在《国家赔偿法》中采取列举式规定和排除式规定相结合的方法。《国
 家赔偿法》规定，行政机关及其工作人员在行使行政职权时侵犯人身权及财产权，受害人有
 取得赔偿的权利。
 此外，对以下三种情形，国家不承担赔偿责任：（1）行政机关工作人员与行使职权无
 关的个人行为；（2）因公民、法人或其他组织自己的行为致使损害发生的；（3）法律规定
 的其他情形。
-（三）行政赔偿请求人和赔偿义务机关
+
+##（三）行政赔偿请求人和赔偿义务机关
 1.赔偿请求人
     受害的公民、法人和其他组织有权要求赔偿。若受害公民死亡，【其继承人和其他有扶养关系的亲属以及死者生前抚养的无劳动能力的人】有权以赔偿请求人身份要求赔偿。若受害的法人或其他组织终止，承受其权利的法人或其他组织有权要求赔偿。
 2.赔偿义务机关
@@ -406,6 +418,8 @@
 国家赔偿以支付赔偿金为主要方式，能够返还财产或恢复原状的，予以返还财产或恢复
 原状。国家机关及其工作人员侵犯公民人身自由、侵犯公民生命健康权，其赔偿金有不同的
 计算标准。【赔偿费用，列入各级财政预算，具体办法由国务院规定】。
+
+
 第三节 民法
 一、民法概述
 （一）民法的概念、特征和原则
