--- a/法律题.md
+++ b/法律题.md
@@ -1,21 +1,40 @@
-### 某私营企业规定职工每周工作时间为：周一到周五，每天工作8小时；周六工作半天（4小时）。这种做法符合规定。（√）
+##### 某私营企业规定职工每周工作时间为：周一到周五，每天工作8小时；周六工作半天（4小时）。这种做法符合规定。（√）
     每周至少休息一天。
 
 
-### 《物权法规定》，为了公共利益的需要，依照法律的规定的权限和程序可以征用单位，个人的不动产或者动产。（×）
+##### 《物权法规定》，为了公共利益的需要，依照法律的规定的权限和程序可以征用单位，个人的不动产或者动产。（×）
     这里是征收！
     征收：把你的财产所有权归于国家
     征用：把使用权交给国家
 
-### 我国制定法律的机关是全国人大及其常委会，公布法律的是国家主席。（√）
-### 国家主席是我国最高的政府行政机构（×）
+##### 我国制定法律的机关是全国人大及其常委会，公布法律的是国家主席。（√）
+##### 国家主席是我国最高的政府行政机构（×）
     是国务院
+    国务院:最高的权利执行机关，最高行政机关，中央人民政府，总理负责制
+
+##### 在民事法律关系中，国家是特殊的民事主体（√）
+    政府也要采购，买东西
+
+##### 行政行为依行为对象做标准，可以分为具体行政行为和抽象行政行为（×）
+    根据行政行为的对象是否特定，而不是行为对象做标准
+    行为对象：老人，小孩，这些都是行为对象，但是不是分类标准
+    行为对象是否特定：特定：特别规定的标准。就是说一种是特别规定的，而另外一种不是特别规定的。
 
 
+##### 甲烧火，被县环保局发狂2000，甲不服，向县政府申请复议，县政府维持改处罚决定。甲不服，起诉。被告是：(C)
+    A:县环保局
+    B:县政府
+    C:县环保局和县政府
+    D:县环保局或县政府
+    复议维持共同告：提起行政复议之后，你们两都觉得行，我要告你们两
+    复议改变单独告：你改变了，你只告你改变了的机关
 
-
-
-
+##### 吴某因诈骗被判有期徒刑10年，附加剥夺政治权利3年，则实际上被剥夺的政治权利应为（C）
+    A:3年
+    B:10年
+    C:13年
+    D:7年
+    被剥夺的政治权利:始于刑罚开始
 
 
 
