--- a/2-3主要实体法.md
+++ b/2-3主要实体法.md
@@ -77,8 +77,8 @@
     （2）处罚原则：《刑法》第 24 条第 2 款规定：―对于中止犯，没有造成损害的，应当
     免除处罚；造成损害的，应当减轻处罚。
 
-四、共同犯罪和单位犯罪
-（一）共同犯罪
+# 四、共同犯罪和单位犯罪
+##（一）共同犯罪
 共同犯罪，是指二人以上共同故意犯罪。
 构成共同犯罪应当具备以下条件：
 ①主体条件。即犯罪主体必须是两个或者两个以上达到刑事责任年龄，具备刑事责任能力的人；
@@ -90,27 +90,36 @@
 
 根据共同犯罪人在共同犯罪中的地位和作用的不同，
 中国刑法把【共同犯罪人分为主犯、从犯、胁从犯、教唆犯四种】，并对之分别规定了不同的处罚原则：
-1.主犯。主犯是指组织、领导犯罪集团进行犯罪活动或者在共同犯罪中起主要领导作用
-的共同犯罪人。主犯包括以下三类：
+### 1.主犯。
+    主犯是指组织、领导犯罪集团进行犯罪活动或者在共同犯罪中起主要领导作用
+    的共同犯罪人。主犯包括以下三类：
     ①犯罪集团中的首要分子，即在集团犯罪中起组织、策划和指挥作用的犯罪人。对于犯罪集团的首要分子，【应当按集团所犯的全部罪行处罚】；
     ②聚众犯罪中的首要分子。即在聚众犯罪中起组织和指挥作用的犯罪分子；
     ③其他在共同犯罪中起主要作用的犯罪分子。对这类主犯，应按其所参与的全部罪行处罚。
-2.从犯。从犯是指在共同犯罪中起次要或者辅助作用的共同犯罪人。
+### 2.从犯。从犯是指在共同犯罪中起次要或者辅助作用的共同犯罪人。
     对于从犯，应当从轻、减轻或者免除处罚。【匆匆见面】
-3.胁从犯。【谢见面】
+### 3.胁从犯。【谢见面】
     胁从犯是指被胁迫参加犯罪的共同犯罪人。对于胁从犯，应当按照他的犯罪情节减轻或者免除处罚。
-4.教唆犯。教唆犯是指唆使本来没有犯罪意图的人产生犯罪意图的共同犯罪人。对于教
-唆犯，应当按照他在共同犯罪中的作用处罚；对于教唆未满 18 周岁的人犯罪的，应当从重处罚；
-被教唆者没有犯被教唆的罪行的，对教唆犯可以从轻、减轻处罚。【教从减重】【教我从信件中，获得爱】
+### 4.教唆犯。
+    教唆犯是指唆使本来没有犯罪意图的人产生犯罪意图的共同犯罪人。对于教
+    唆犯，应当按照他在共同犯罪中的作用处罚；对于教唆未满 18 周岁的人犯罪的，应当从重处罚；
+    被教唆者没有犯被教唆的罪行的，对教唆犯可以从轻、减轻处罚。【教从减重】【教我从信件中，获得爱】
 
 【虽然是匆匆见面，但是谢谢你这次见面，教会了我从信件中获得爱】
 
-    ### 下列从犯的有（AC）
+##### 下列从犯的有（AC）
     A:在共同犯罪中起次要的共同犯罪人
     B:在犯罪中的非领导者，非组织者
     C:在共同犯罪中辅助作用的共同犯罪人
     D:被教唆实施犯罪的人
 
+##### 被教唆者没有犯被教唆的罪行的，对教唆犯（A）
+    A:可以从轻、减轻处罚
+    B:应当从轻、减轻处罚
+    C:可以从轻、减轻处罚或免除
+    D:应当从轻、减轻处罚或免除
+    注：你让没有犯罪意图的人去犯罪，我还能免除你吗？
+    
 
 
 （二）单位犯罪
@@ -405,10 +414,19 @@
     （4）受行政机关委托的组织或个人行使受委托的权力时侵权，【委托的行政机关为赔偿义务机关。】
     （5）经复议机关复议的，最初造成侵权行为的行政机关为赔偿义务机关，
     但复议机关的复议决定加重损害的，【复议机关对加重的部分履行赔偿义务。】
-（四）行政赔偿的赔偿程序
+## （四）行政赔偿的赔偿程序
 行政赔偿请求的提出与实现有两种途径：
 一种是受害人单独提出行政赔偿请求；
 一种是受害人在行政复议、行政诉讼中一并提出。
+
+##### 我国行政赔偿的途径，不包括下列哪项（D）
+    A:受害人单独提出行政赔偿请求；
+    B:行政复议一并提出
+    C:行政诉讼中一并提出
+    D:单独就赔偿问题向人民法院提出。
+    注：可以单独提出，但是不可以单独向人民法院提出。可以在告行政机关的时候提出。
+
+
 请求赔偿应当递交申请书，申请书应当载明下列事项：（1）受害人的姓名、性别、年
 龄和工作等情况；（2）具体的要求、事实根据和理由；（3）申请的年、月、日。
 赔偿义务机关赔偿损失后，应当责令有故意或重大过失的工作人员或受委托的组织或个
