--- a/法律题.md
+++ b/法律题.md
@@ -36,6 +36,69 @@
     D:7年
     被剥夺的政治权利:始于刑罚开始
 
+##### 甲乙对在婚姻存续期间的财产，没有做规定，在婚姻关系存续期间所得财产属于甲或者乙个人财产的是（D）
+    A:甲的年终奖
+    B:乙转让所得的股份
+    C:已甲的名义购买的汽车
+    D:乙的父母全额购买并登记在乙名下的房屋
+
+##### 城管执法人员为阻止摊贩继续非法占道经营，暂扣了兜售的物品，这一行为在法律上属于：（A）
+    A:行政强制措施   暂时性的把你东西扣押的，把你的财务冻结的。
+    B:行政强制执行   划拨财产，永久性的   
+    C:行政处罚
+    D:民事侵权行为
+    行政强制措施：暂时性的
+    行政强制执行：永久性的
+
+##### 下列哪项行为不能减轻或者免除法律责任的（D）
+    A:家住在偏偏的山区王某把入室抢劫的李某捆起来，关押了6小时后，才把李某送到20公里外的公安局  (自助型免责)
+    B:李某偷了一辆价值150元的自行车，10年后被人查出（时效免责）
+    C:医生征得李某的同意，锯掉长有恶性肿瘤的小腿
+    D:赵某和三个青年打架，拔出刀子将对方一人刺成重伤 (斗殴的行为，不存在免责)
 
 
+##### 下列从犯的有（AC）
+    A:在共同犯罪中起次要的共同犯罪人
+    B:在犯罪中的非领导者，非组织者
+    C:在共同犯罪中辅助作用的共同犯罪人
+    D:被教唆实施犯罪的人
 
+##### 被教唆者没有犯被教唆的罪行的，对教唆犯（A）
+    A:可以从轻、减轻处罚
+    B:应当从轻、减轻处罚
+    C:可以从轻、减轻处罚或免除
+    D:应当从轻、减轻处罚或免除
+    注：你让没有犯罪意图的人去犯罪，我还能免除你吗？
+
+##### 我国行政赔偿的途径，不包括下列哪项（D）
+    A:受害人单独提出行政赔偿请求；
+    B:行政复议一并提出
+    C:行政诉讼中一并提出
+    D:单独就赔偿问题向人民法院提出。
+    注：可以单独提出，但是不可以单独向人民法院提出。可以在告行政机关的时候提出。
+
+##### 劳动合同可以约定试用期，但是试用期最长不得超过（B）
+    A:3个月
+    B:6个月
+    C:1年
+    D:2年
+
+##### 李某不服工商所对其作出的300元的罚款，应向（D）
+    A:该工商局
+    B:该工商局所在乡政府
+    C:派出该工商所的工商局的上级机关
+    D:派出该工商所的工商局
+    注：工商所受到工商局的垂直领导
+
+##### 当代中国法的非正式渊源不包括（C）；
+    A:习惯
+    B:党的政策
+    C:法规  法规是正式渊源。
+    D:判例
+    法的正式渊源：？
+
+
+A:
+B:
+C:
+D:
