--- a/2-2宪法.md
+++ b/2-2宪法.md
@@ -189,22 +189,21 @@
     作为个体的公民在一国法律关系中的宪法和法律地位；人民所表达的往往是群体概念，是自
     然人群体的集合，反映了【当代社会国家权力的唯一源泉和归宿】。
 
-二、公民的基本权利
+## 二、公民的基本权利
 根据我国现行宪法的有关规定，公民的基本权利有：
-1.平等权。是指公民依法享有权利和履行义务，不受任何差别对待，要求国家同等保护
-的权利，即“公民在法律面前一律平等”。公民的平等权有以下含义：
+### 1.平等权。是指公民依法享有权利和履行义务，不受任何差别对待，要求国家同等保护的权利，即“公民在法律面前一律平等”。公民的平等权有以下含义：
     （1）所有公民平等的享有宪法和法律规定的权利；
     （2）所有公民都平等的履行宪法和法律规定的义务；
     （3）国家机关在适用法律时，对于所有公民的保护或者惩罚都是平等的，不得因人而异；
     （4）任何组织或者个人都不得有超越宪法和法律的特权。
-2.政治权利和自由。主要指公民依法参与国家政治生活、管理国家事务的权利和表达自
-己政治意愿的自由，主要包括：
+### 2.政治权利和自由。主要指公民依法参与国家政治生活、管理国家事务的权利和表达自己政治意愿的自由，主要包括：
     （1）选举权与被选举权。年满十八周岁的我国公民都一律享有选举权和被选举权，但
     是依照法律被剥夺政治权利的人除外。
     （2）言论、出版、集会、结社、游行、示威的自由。
-    （3）对国家机关和国家工作人员，有批评、建议的权利，申诉、控告或者检举的权利，依法取得赔偿的权利。
+    （3）对国家机关和国家工作人员，有批评、建议的权利，申诉、控告或者检举的权利，
+    （4）依法取得赔偿的权利。
 
-    ### 公民基本权利的说法正确的是（BCD）
+##### 公民基本权利的说法正确的是（BD）
     A:任何公民都有选举和被选举的权利
     B:通过各种语言表达思想和观点的自由
     C:自行集会的权利 ：没有自行游行的权利
