--- a/法律题.md
+++ b/法律题.md
@@ -97,6 +97,38 @@
     D:判例
     法的正式渊源：？
 
+##### 张某76周岁，和邻居发生争执，拿刀刺死了邻居，下列说法正确的是（CD）
+    A:不承担刑事责任
+    B:应当从轻或者减轻处罚
+    C:可以从轻或者减轻处罚
+    D:审判的时候一般不适用死刑
+    故意犯罪：可以从轻，或者减轻
+
+
+##### 剥夺政治权利通常是剥夺：（ABCD）
+    A:选举权
+    B:被选举权
+    C:言论出版集会结社游行示威自由的权利
+    D:担任国家机关职务的权利 （被剥夺政治权利的人，不能担任国家机关工作人员中的任何职务。）
+
+##### 公民必须依照《中华人民共和国集会游行示威法》行使自己的集会、游行、示威权利，这是对公民政治自由权利的限制。”这种观点
+    ①认为公民应无拘无束地行使政治自由权利
+    ②认为法律和自由是统一的
+    ③主张公民在法律范围内行使政治自由权利
+    ④割裂了自由和法律的关系，因而是错误的
+    A. ②③④
+    B. ①③
+    C. ①③④
+    D. ①④
+
+##### 和立法，司法相比，执法具有（ABCD）的特征。
+    A:主动性
+    B:具体性
+    C:单一性
+    D:强制性
+
+
+
 
 A:
 B:
