--- a/2-1法理学.md
+++ b/2-1法理学.md
@@ -1,152 +1,196 @@
 第一节 法的一般原理
-一、法的概念和基本特征
-（一）法的概念
-法是由国家【制定或认可】的，以【权利和义务】为主要内容并以【国家强制力】保证实施，具有普
-遍约束力的行为规范的总和，【是统治阶级意志】的体现。
-（二）法的基本特征
-法律作为一种特殊的社会规范同其他社会规范比较来看有以下鲜明特征：
-1.法是调整人们行为的社会规范。【不调整思想】
-法的规范性具体体现在三个方面：
+# 一、法的概念和基本特征
+## （一）法的概念
+    法是由国家【制定或认可】的，
+    以【权利和义务】为主要内容
+    并以【国家强制力】保证实施，
+    具有普遍约束力的行为规范的总和，
+    【是统治阶级意志】的体现。
+
+## （二）法的基本特征
+    法律作为一种特殊的社会规范同其他社会规范比较来看有以下鲜明特征：
+
+### 1.法是调整人们行为的社会规范。【不调整思想】
+    法的规范性具体体现在三个方面：
     一是法对人们【如何行为提出了明确的指示】；
     二是法的内容具有【一般性和概括性】；
-    三是在其生效期间法能够反复适用。法的调控不是针对某个人的，也不是局限于某一个
-    固定的时间，而是对不特定的多数人，在【连续的某一时期】均有效力。
-2.法由国家制定或认可。
+    三是在其生效期间法能够反复适用。法的调控不是针对某个人的，也不是局限于某一个固定的时间，而是对不特定的多数人，在【连续的某一时期】均有效力。
+
+### 2.法由国家制定或认可。
     法是【出自国家的社会规范】，即法的【国家意志性】，因此具有【高度的统一性】、普遍适用性。
     【制定、认可】，是法律创制的两种主要方式。
-3.法以权利和义务为主要内容。
-    法以权利义务双向规定为调整机制。权利和义务是相对应的，每个社会成员既是权利主
-    体，又是义务主体，在享有权利的同时，【必须履行相应的义务】，
+
+### 3.法以权利和义务为主要内容。
+    法以权利义务双向规定为调整机制。
+    权利和义务是``相对应的``，每个社会成员既是权利主体，又是义务主体，
+    在享有权利的同时，【必须履行相应的义务】，
     【其他社会规范并不都是将权利和义务相对应】。法律的主要内容是【规定人们权利和义务】，
     通过对人们权利和义务的配置和运作，影响他们的行为动机，指导他们的行为，借以调整社会关系。
-4.法由国家强制力保证实施。
+### 4.法由国家强制力保证实施。
     法是统治阶级的意志，直接表现为国家意志，对法的违犯，表现为对国家意志的挑战，
     因此对违法者，【必须以国家的名义予以制裁】。这种制裁，表现为一种强制性的制裁，而不以
     当事人的意志为转移。
-二、法的分类
-1.国际法与国内法（根据法的创制与适用主体为标准来划分）
+
+## 二、法的分类
+### 1.国际法与国内法（根据法的创制与适用主体为标准来划分）
+    ``创制主体和适用主体来划分``
     国内法是指一个主权国家制定的实施于本国的法律。
     国际法是指国际法律关系主体参与制定或公认的适用于各个主体之间的法律。
     国际法律关系的主体主要是国家。
     注意区分国际法同一个国家的作为国内法的涉外法。
-2.成文法与不成文法（根据法的创制形式和表现形式为标准来划分）
-    成文法，又叫【制定法】，是指国家机关制定和公布的，以文字符号形式表现出来的法律。
-    习惯法是指【国家虽然认可其具有法律效力】，但【未以文字符号形式表现出来的法律】。
-3.根本法与普通法（根据法的效力、内容与制定程序为标准来划分）
+
+### 2.成文法与不成文法（根据法的创制形式和表现形式为标准来划分）
+    成文法，又叫【制定法】，是指国家机关制定和公布的，以``文字符号``形式表现出来的法律。
+    习惯法是指【国家虽然认可其具有法律效力】，但【``未以文字符号``形式表现出来的法律】。
+
+### 3.根本法与普通法（根据法的效力、内容与制定程序为标准来划分）
     根据法的效力、内容和制定程序划分为根本法和普通法。这【适用于成文宪法制国家】，
-    【在不成文宪法制国家，具有宪法性内容的法律同普通法法律在效力上是相同的】。
+    【在``不成文宪法制国家``，具有宪法性内容的法律同普通法法律``在效力上是相同的``】。
 
     【根本法】，即【宪法】，是指在一个国家中，规定国家的最根本的经济、政治和社会制度，公
     民的基本权利和义务以及【国家机构组织和活动的基本原则】，具有最高的法律地位和效力，制
     定修改需要特别的程序。
-    【普通法】，其内容一般是调整某一或者某些社会关系，效力低于根本法，制定和修改必须
+    【普通法】，其内容一般是``【调整某一或者某些社会关系】``，效力低于根本法，制定和修改必须
     符合根本法，程序较根本法要简单。
-4.一般法与特别法（根据法的适用范围为标准）
-    一般法：
+
+### 4.一般法与特别法（根据法的适用范围为标准）
+    ``一般法：``
         是指对一般人、一般事项、一般时间、一般空间范围有效的法，带有一定的普遍
-    性，如刑法、民法、婚姻法。
-    特别法:
+    性，如``【刑法、民法、婚姻法】``。
+
+    ``特别法:``
         是指对于特定的人和事，在特定的地区、时间内有效的法律。特定人的法，如
     《未成年人保护法》、《警察法》和《教师法》。特定事的法，如《国籍法》或《教育法》。
     特定地区的法，如《民族区域自治法》。特定时间的法，如《戒严法》。
 
-5.实体法与程序法（根据法所规定内容的不同为标准）
-    实体法是指所规定的主要是法律关系主体的实体权利和义务（或者准则、职权）的法律，
-    程序法是指所规定的主要是保怔法律关系主体的权利和义务【得以实施的程序和方式】的。
+### 5.实体法与程序法（根据法所规定内容的不同为标准）
+    ``实体法是``
+        指所规定的主要是法律关系主体的实体权利和义务（或者准则、职权）的法律，
+    ``程序法是``
+        指所规定的主要是保怔法律关系主体的权利和义务【得以实施的程序和方式】的。
 
-三、法律关系
-（一）法律关系的概念和特征
-法律关系是法律在调整人们行为的过程中形成的权利和义务关系。它与一般的社会关系
-相比，有三个最主要的特征：
+# 三、法律关系
+## （一）法律关系的概念和特征
+    法律关系是法律在调整人们行为的过程中形成的权利和义务关系。它与一般的社会关系相比，
+    ``有三个最主要的特征：``
+
     法律关系是【以法律规范为前提】而形成的社会关系；
     法律关系是【以法律上的权利、义务为纽带】而形成的社会关系；
     法律关系是【以国家强制力为保障】的社会关系。
-（二）法律关系的分类
-平向法律关系：
-    是指存在于法律地位平等的当事人之间的法律关系，以民事法律关系最为典型。
-纵向法律关系：
-    是指一方当事人可依据职权而直接要求他方当事人为或不为一定行为的法律关系，以行政法律关系为典型。
 
-（三）法律关系的主体和客体
+## （二）法律关系的分类
+    ``平向法律关系：``
+        是指存在于法律地位平等的当事人之间的法律关系，以民事法律关系最为典型。
+    ``纵向法律关系：``
+        是指一方当事人可依据职权而直接要求他方当事人为或不为一定行为的法律关系，以行政法律关系为典型。
+
+## （三）法律关系的主体和客体
     法律关系的主体：是【法律关系的参加者】，即在【法律关系中享有权利或负有义务的人】。
-    法律上所使用的“人”主要是指【自然人和法人】。
-    1.自然人：
-        是指有生命并具有法律人格的个人，是权利主体和义务主体最基本的形态，包括
+    法律上所使用的“人”主要是指``【自然人和法人】``。
+### 1.自然人：
+    是指有生命并具有法律人格的个人，是权利主体和义务主体最基本的形态，包括
     公民、外国人和无国籍人。
-    2.法人：
-        是指具有法律人格，能够以自己的名义独立享有权利或承担义务的组织。
-    （在特殊情况下,国家可以作为一个整体成为法律关系主体）
-    3.法律关系的客体：
-        是法律关系的主体和客体共同指向的对象。法律关系的客体种类有四
+### 2.法人：
+    是指具有法律人格，能够以自己的名义独立享有权利或承担义务的组织。
+    （在特殊情况下,``国家可以作为一个整体成为法律关系主体``）
+### 3.法律关系的客体：
+    是法律关系的主体和客体共同指向的对象。法律关系的客体种类有四
     种：物、行为、智力成果和人身利益。
 
-（四）法律关系内容——权利和义务
-    1.权利和义务的概念
+## （四）法律关系内容——权利和义务
+### 1.权利和义务的概念
         权利是指法律对权利主体作出或不作出一定行为的【许可与保障】。
         义务是指法律要求义务主体作出或不作出一定【行为的约束】。
-    2.权利与权力的关系
-    （1）权力来源于权利。国家权力来源于公民的权利，这是民主共和国和法治国家最重
-    要的理论基石。
+### 2.权利与权力的关系
+    （1）权力来源于权利。国家权力来源于公民的权利，这是民主共和国和法治国家最重要的理论基石。
     （2）权力服务权利。国家权力运行的唯一目的是保障公民权利的实现。
     （3）权利制约权力。权力易于膨胀、滥用和异化，必须运用权利制约权力。
         公民的权利制约权力
 
-（五）法律关系的形成、变更与消灭
-法律关系的形成、变更和消灭，需要具备一定的条件。其中最主要的条件有二：一是法
-律规范；二是法律事实。
-1.法律规范
+###（五）法律关系的形成、变更与消灭
+
+    法律关系的形成、变更和消灭，需要具备一定的条件。其中最主要的条件有二：
+        一是法律规范；
+        二是法律事实。
+
+### 1.法律规范
     法律规范是法律关系形成、变更和消灭的法律依据，【没有一定的法律规范就不会有相应的法律关系。】
     但法律规范的规定只是主体权利和义务关系的一般模式，【还不是现实的法律关系本身】。
-2.法律事实
+### 2.法律事实
     法律关系的形成、变更和消灭还必须具备【直接的前提条件】，这就是法律事实。它是法律
     规范与法律关系联系的中介。
     所谓法律事实，就是法律规范所规定的、能够引起法律关系产生、变更和消灭的客观情况或现象。
     依是否以人们的意志为转移作标准，可以将法律事实大体上分为两类，即法律事件和法
     律行为。
-    （1）法律事件
-    法律事件是法律规范规定的、不以当事人的意志为转移而引起法律关系形成、变更或消
-    灭的客观事实。
+
+####（1）法律事件
+    
+    法律事件是法律规范规定的、不以当事人的意志为转移而引起法律关系形成、变更或消灭的客观事实。
         法律事件又分成社会事件和自然事件两种。
-            前者如社会革命、战争等，
+        
+        ``社会事件``
+            如社会革命、战争等，
+        ``自然事件``
             后者如人的生老病死、自然灾害等。
-    （2）法律行为
+
+####（2）法律行为
+
     法律行为指能发生法律上效力的人们的意志行为，即根据当事人的个人意愿形成的一种
-    有意识的活动，它是在社会生活中引起法律关系产生、变更和消灭的【最经常的事实】。
+    有意识的活动，它是在社会生活中引起法律关系产生、变更和消灭的``【最经常的事实】``。
     法律行为包括直接意义上的作为，也包括不作为。
     也可以分为善意行为、合法行为与恶意行为、违法行为。
-四、法的渊源
-法的渊源，也称为法的表现形式，用以指称法的具体的外部表现形态。由于法的制定主
-体及其相应的权力的不同，法的效力等级也就不同。
-根据制定的机关和效力层级的不同，我国法的渊源主要包括以下几种：
-①宪法；②法律；③行政法规；④地方性法规；⑤自治条例、单行条例；⑥行政规章；⑦国际条约。
-【宪法行地自章国】
-（一）当代中国法的正式渊源
-1.宪法
-（1）制定和修改主体：全国人大。
-（2）修改程序
-宪法由【全国人民代表大会常务委员会】或者【五分之一以上的全国人民代表大会代表提议】，
-并由全国人民代表大会以全体代表的三分之二以上的多数通过。
-2.法律
+
+#### 总结
+    法律关系的形成、变更与消灭
+        一是法律规范；
+        二是法律事实。（直接的前提条件）是否以人们的意志为转移作标准
+            （1）法律事件 (法律规范规定的、不以当事人的意志为)
+                ``社会事件``
+                    如社会革命、战争等，
+                ``自然事件``
+                    后者如人的生老病死、自然灾害等。
+            （2）法律行为
+
+
+
+
+# 四、法的渊源
+
+    法的渊源，也称为法的``表现形式``，用以指称``法的具体的外部表现形态``。由于法的制定主体及其相应的权力的不同，法的效力等级也就不同。
+
+    根据制定的机关和效力层级的不同，我国法的渊源主要包括以下几种：
+    ①宪法；②法律；③行政法规；④地方性法规；⑤自治条例、单行条例；⑥行政规章；⑦国际条约。
+    【宪法行地自章国】
+
+## （一）当代中国法的正式渊源
+
+### 1.宪法
+    （1）制定和修改主体：全国人大。
+    （2）修改程序
+        宪法由【全国人民代表大会常务委员会】或者【``五分之一``以上的全国人民代表大会代表提议】
+        并由全国人民代表大会以全体代表的``三分之二``以上的多数通过。
+### 2.法律
 （1）制定主体：全国人大——基本法；全国人大常委会——基本法以外的法律
-    法律【绝对保留事项】：犯罪和刑罚、对公民政治权利的剥夺和限制人身自由的强制措施和
-    处罚、司法制度等事项。
-3.行政法规
+    法律【绝对保留事项】：犯罪和刑罚、对公民政治权利的剥夺和限制人身自由的强制措施和处罚、司法制度等事项。
+### 3.行政法规
     行政法规由国务院制定。
-4.地方性法规
+### 4.地方性法规
     地方性法规制定主体：
         （1）省、自治区和直辖市人大及其常委会；
         （2）较大的市人大及其常委会。
-较大的市包括以下三种：
-    ①省、自治区的人民政府所在地的市，简称省会城市；【南昌市】
-    ②经国务院批准的较大的市；
-    ③经济特区所在地的市。
-5.自治法规
-（1）制定主体
-    自治法规由自治区、自治州、自治县人大制定。【无常委会】
-（2）生效条件
-    自治区人民代表大会制定的自治条例和单行条例，报【全国人民代表大会常务委员会批准后生效】。
-    自治州、县人民代表大会制定的自治条例和单行条例，报【自治区人民代表大会常务委员会批准后生效】。
-6.规章
+    较大的市包括以下三种：
+        ①省、自治区的人民政府所在地的市，简称省会城市；【南昌市】
+        ②经国务院批准的较大的市；
+        ③经济特区所在地的市。
+
+### 5.自治法规
+    （1）制定主体
+        自治法规由自治区、自治州、自治县人大制定。【无常委会】
+    （2）生效条件
+        自治区人民代表大会制定的自治条例和单行条例，报【全国人民代表大会常务委员会批准后生效】。
+        自治州、县人民代表大会制定的自治条例和单行条例，报【自治区人民代表大会常务委员会批准后生效】。
+
+### 6.规章
 （1）分类
     规章通常称行政规章，包括部门规章和地方人民政府规章。
 （2）制定主体
@@ -160,6 +204,8 @@
     方性法规的规定；
     认为应当适用部门规章的，应当提请全国人民代表大会常务委员会裁决。
     3.部门规章之间、部门规章与地方政府规章之间对同一事项的规定不一致时，【由国务院裁决】。
+
+    
 五、法律体系与法系
 （一）法律体系
 法律体系是指由一国现行的【全部法律规范】按照不同的【法律部门分类】组合而形成的一个
