--- a/法律题.md
+++ b/法律题.md
@@ -127,6 +127,25 @@
     C:单一性
     D:强制性
 
+##### 我国宪法的基本原则包括：(ABCD)
+    A.人民主权原则
+    B.基本人权原则
+    C.法治原则
+    D.权力制约原则
+
+##### 劳动合同终止的情形包括：(ABCD)
+    A:劳动合同期满
+    B:用人单位吊销营业执照
+    C:用人单位破产的
+    D:劳动者开始依法享受基本养老保险的
+
+##### 在行政诉讼中，（AC）对具体的行政行为负举证责任
+    A:行政机关
+    B:行政机关人员
+    C:法律法规授权的组织
+    D:行政机关委托的组织
+    行政法里面规定的官：行政机关，法律法规授权的组织
+
 
 
 
