--- a/2-2宪法.md
+++ b/2-2宪法.md
@@ -130,17 +130,17 @@
     ③由专门机构监督宪法的实施。这些国家设立专门机构，如宪法委员会、宪法法院等，
     履行解释宪法、监督宪法实施的职责。
     《宪法》第 62 条与 67 条规定【全国人大和全国人大常委会负责监督宪法的实施】。
-第二节 我国的国体、政体和结构形式
-一、我国的国体和政体
-所谓国体，是指国家的根本性质，即国家的阶级性质和阶级内容。国体体现着国家的阶级本质和内涵。
-所谓政体，是指国家政权的组织形式和管理形式，即统治阶级采取何种方式组织自己的政权机关，实现自己的统治。
+# 第二节 我国的国体、政体和结构形式
+# 一、我国的国体和政体
+    所谓国体，是指国家的根本性质，即国家的阶级性质和阶级内容。国体体现着国家的阶级本质和内涵。
+    所谓政体，是指国家政权的组织形式和管理形式，即统治阶级采取何种方式组织自己的政权机关，实现自己的统治。
 
-国体决定政体，但政体有相对的独立性，同样的国体可以有不同的政体形式。
-我国的国体是工人阶级领导的以工农联盟为基础的人民民主专政的社会主义国家，
-我国的政体是以【民主集中制为组织原则和活动原则的】人民代表大会制度。
+    国体决定政体，但政体有相对的独立性，同样的国体可以有不同的政体形式。
+    我国的国体是工人阶级领导的以工农联盟为基础的人民民主专政的社会主义国家，
+    我国的政体是以【民主集中制为组织原则和活动原则的】人民代表大会制度。
 
-民主集中制在中国的具体表现是中共决策，政协参议，人大立法，政府执行。
-这一制度被西方学者约翰·奈斯比特在《大趋势》中称为具有中国特色的“纵向民主”。
+    民主集中制在中国的具体表现是中共决策，政协参议，人大立法，政府执行。
+    这一制度被西方学者约翰·奈斯比特在《大趋势》中称为具有中国特色的“纵向民主”。
 
 二、国家结构形式
 （一）国家结构形式的含义
