--- a/法律题.md
+++ b/法律题.md
@@ -146,6 +146,98 @@
     D:行政机关委托的组织
     行政法里面规定的官：行政机关，法律法规授权的组织
 
+##### 我国社会主义法律制度首先是哪个阶级意志的体现？( A )
+    A．工人阶级
+    B．农民阶级
+    C．拥护国家统一的爱国者
+    D．拥护社会主义的爱国者
+    E. 中国产党
+    F. 农民
+    G. 全体中国人民
+    我国是工人阶级领导的以工农联盟为基础的人民民主专政的社会主义国家    
+    首先是：工人阶级意志的体现
+    其次是：工人阶级领导下，全体人民共同意志的体现    
+
+##### 法律的指引作用主要是通过授权性规范、禁止性规范和义务性规范三种规范形式来实现的，其中，义务性规范是告诉人们(C)。
+    A．不得或者不准做什么
+    B．可以或者有权做什么
+    C．应当或者必须做什么：比如服兵役，必须要的！
+    D．能够或者不能做什么
+    注：注意和权利区分,考查：## （四）法律关系内容——权利和义务
+
+##### 法律指引作用主要是通过（ABC）
+    A．授权性规范形式实现的 
+    B．禁止性规范形式实现的
+    C．义务性规范形式实现的 
+    D．权利性规范形式实现的
+
+##### 对法律权威表述正确的是(ABCD)
+    A．法律权威是指法的不可违抗性
+    B．法律权威的树立主要依靠法律的外在强制力和内在说服力
+    C．法律的外在强制力是法律权威的外在条件
+    D．法律的内在说服力是法律权威的内在基础
+    E. 法的强制性
+    F. 法的规范性
+    G. 法的合法性
+
+    法律权威是就国家和社会管理过程中``法律的地位和作用而言的``，是指法的不可违抗性。
+    法律权威的树立主要依靠法律的外在强制力和内在说服力。
+    法律的外在强制力是法律权威的外在条件，主要表现为国家对违法行为的制裁；
+    法律的内在说服力是法律权威的内在基础。
+
+##### 对法律权威是(A)
+    A．不可违抗性
+    B．法的规范性
+    C．法的合法性
+    D．法的强制性
+
+#### 我国法律的效力（D）
+    A:属地主义
+    B:属人主义
+    C:保护主义
+    D:结合主义
+
+    ##（三）对人的效力
+
+    第一，我国公民在我国领域内，一律适用我国法律。（属地管辖）
+    第二，外国人（包括无国籍人）在我国领域内除法律有特别规定的（如享有外交特权和豁免权的人）以外，也都适用我国法律。（属地管辖）
+    第三，我国公民在我国领域以外，原则上也应该适用我国法律，法律有特别规定的按法律规定。（属人管辖）
+    第四，外国人在我国领域外，如果侵害了我国国家或公民的权益或者与我国公民、法人和其他组织发生法律交往关系，也可以适用我国法律。（保护管辖）
+
+
+##### 自治区的自治条例和单行条例生效条件（D）
+    A:自公布之日起生效
+    B:报国务院批准后生效
+    C:报全国人大批准后生效
+    D:报全国人大常委批准后生效
+    ### 5.自治法规
+
+    自治区人民代表大会制定的自治条例和单行条例，报【全国人民代表大会常务委员会批准后生效】。
+    自治州、县人民代表大会制定的自治条例和单行条例，报【自治区人民代表大会常务委员会批准后生效】。
+
+
+
+##### 制度部门规章的主体是：（A）
+    A:审计署
+    B:国务院
+    C:地方县级政府
+    D:地方县级政府部门
+    ### 6.规章
+
+    部门规章：国务院各部、委员会、中国人民银行、审计署、直属机构。
+
+##### 某省的人大常委制定了该省的《食品卫生条例》，关于地方性法规，下列（C）是不正确的。
+    A: 该法规所规定的内容主要属于行政法部门
+    B: 该法规属于我国法律的正式渊源，法院审理相关案件时可直接适用
+    C: 该法规的具体应用问题，应由该省人大常委会进行解释
+    D: 该法规虽仅在该省范围适用，但从效力上看具有普遍性
+
+    # 六、法律解释
+
+    省、自治区、直辖市和其他有权制定地方性法规的地方人大常委会对其制定的``需要进一步明确界限``或``作补充规定的地方性法规``的解释。
+    省、自治区、直辖市人民政府主管部门``对地方性法规``如何具体应用的问题所做的解释。
+
+
 
 
 
@@ -153,3 +245,5 @@ A:
 B:
 C:
 D:
+E:
+F:
