--- a/2-1法理学.md
+++ b/2-1法理学.md
@@ -101,6 +101,14 @@
 ### 1.权利和义务的概念
         权利是指法律对权利主体作出或不作出一定行为的【许可与保障】。
         义务是指法律要求义务主体作出或不作出一定【行为的约束】。
+
+##### 法律的指引作用主要是通过授权性规范、禁止性规范和义务性规范三种规范形式来实现的，其中，义务性规范是告诉人们(C)。
+    A．不得或者不准做什么
+    B．可以或者有权做什么
+    C．应当或者必须做什么
+    D．能够或者不能做什么
+    注：注意和权利区分
+
 ### 2.权利与权力的关系
     （1）权力来源于权利。国家权力来源于公民的权利，这是民主共和国和法治国家最重要的理论基石。
     （2）权力服务权利。国家权力运行的唯一目的是保障公民权利的实现。
@@ -205,6 +213,13 @@
     认为应当适用部门规章的，应当提请全国人民代表大会常务委员会裁决。
     3.部门规章之间、部门规章与地方政府规章之间对同一事项的规定不一致时，【由国务院裁决】。
 
+##### 制度部门规章的主体是：（A）
+    A:审计署
+    B:国务院
+    C:地方县级政府
+    D:地方县级政府部门
+
+
     
 五、法律体系与法系
 （一）法律体系
@@ -228,27 +243,35 @@
 英美法系，又称普通法法系、英国法系，是以英国自中世纪以来的法律，特别是它的普
 通法为基础而发展起来的法律的总称。英美法系首先起源于 11 世纪诺曼人入侵英国后逐步
 形成的以判例形式出现的普通法。
-六、法的效力
-（一）空间上的效力
+
+# 六、法的效力
+##（一）空间上的效力
     在我国，凡是中央国家机关制定的法律、行政法规和其他规范性法律文件，除有特别规
     定外，一经公布施行，就在我国全部领域内发生效力。
     地方政权机关制定和颁布的规范性法律文件，【只在所辖的地区内】生效。
-（二）时间上的效力
+
+##（二）时间上的效力
     是指法律效力的起止时间以及对法律实施以前的行为有无溯及既往的效力，包括法的生
     效、失效和溯及力等问题。法通常自公布之日起生效，但有的法本身就规定了生效日期。法
     的终止生效。又称法的废止与失效，指法从何时起不再有效，通常有【明示与默示】二种形式。
     法的溯及力的问题，是指该项法律公布生效以前所发生的事件或者行为，是否适用该项
     法律的问题。如果适用就是有溯及力，如果不适用就是没有溯及力。我国法律一般不具有溯
     及力，但法律另有规定的除外。我国一般采取【从旧兼从轻】原则。
-（三）对人的效力
-法对人的效力包括两个方面：
-    第一对中国公民的效力。【中国公民在中国领域内一律适用中国的法律】；中国公民在中国
-    领域外仍受中国的法律调整和保护，但由于各国的法律规定不同，为了处理好本国主权与他
-    国主权的关系，我国现行法律规定，有的可以适用外国法，有的则须适用中国法。
+
+##（三）对人的效力
+    ``法对人的效力包括两个方面：``
+    第一对中国公民的效力。【中国公民在中国领域内一律适用中国的法律】；（属地管辖）
+    中国公民在中国领域外仍受中国的法律调整和保护，但由于各国的法律规定不同，为了处理好本国主权与他
+    国主权的关系，我国现行法律规定，有的可以适用外国法，有的则须适用中国法。（属人管辖）
 
     第二，对外国公民的权力。外国公民在中国领域内一般适用中国的法律，但享有外交特
-    权和豁免权的外国人除外。
+    权和豁免权的外国人除外。（属地管辖）
 
+
+    第一，我国公民在我国领域内，一律适用我国法律。（属地管辖）
+    第二，外国人（包括无国籍人）在我国领域内除法律有特别规定的（如享有外交特权和豁免权的人）以外，也都适用我国法律。（属地管辖）
+    第三，我国公民在我国领域以外，原则上也应该适用我国法律，法律有特别规定的按法律规定。（属人管辖）
+    第四，外国人在我国领域外，如果侵害了我国国家或公民的权益或者与我国公民、法人和其他组织发生法律交往关系，也可以适用我国法律。（保护管辖）
 
 第二节 法治理论
 一、法治的含义
@@ -424,25 +447,26 @@
     第一，检察机关的监督。
     第二，审判机关的监督。
 
-六、法律解释
-从我国法律的实际运行过程看，我国的法律的正式解释大体上可以分为立法解释、行政
-解释和司法解释。
-1.立法解释
-    从狭义上说，立法解释专指国家立法机关对法律所做的解释；从广义上说，则泛指所有
-    依法有权制定法律、法规的国家机关或其授权机关，对自己制定的法律、法规进行的解释。
-    这里所说的立法解释是广义的。它包括：（1）全国人大常委会对宪法的解释，以及对需要
-    进一步明确界限或作补充规定的法律的解释；（2）国务院及其主管部门对自己制定的需要
-    进一步明确界限或作补充规定的行政法规的解释；（3）省、自治区、直辖市和其他有权制
-    定地方性法规的地方人大常委会对其制定的需要进一步明确界限或作补充规定的地方性法
-    规的解释。
-2.行政解释
+# 六、法律解释
+    从我国法律的实际运行过程看，我国的法律的正式解释大体上可以分为立法解释、行政解释和司法解释。
+### 1.立法解释
+    从狭义上说，立法解释专指国家立法机关对法律所做的解释；
+    从广义上说，则泛指所有依法有权制定法律、法规的国家机关或其授权机关，对自己制定的法律、法规进行的解释。
+
+    这里所说的立法解释是广义的。它包括：
+    （1）全国人大常委会对宪法的解释，以及对需要进一步明确界限或作补充规定的法律的解释；
+    （2）国务院及其主管部门对自己制定的需要进一步明确界限或作补充规定的行政法规的解释；
+    （3）省、自治区、直辖市和其他有权制定地方性法规的地方人大常委会对其制定的``需要进一步明确界限``或``作补充规定的地方性法规``的解释。
+
+### 2.行政解释
     行政解释是指【国家行政机关】在依法行使职权时，对有关法律、法规如何具体应用问题所
-    做的解释。它有两种情况：（1）国务院及其主管部门对不属于审判和检察工作中的其他法
-    律如何具体应用问题所做的解释；（2）省、自治区、直辖市人民政府主管部门对地方性法
-    规如何具体应用的问题所做的解释。
-3.司法解释
-    司法解释是指【国家最高司法机关】在适用法律、法规的过程中，对如何具体应用法律、法
-    规的问题所做的解释。它包括：（1）审判解释；（2）检察解释；（3）审判、检察联合解释。
+    做的解释。它有两种情况：
+    （1）国务院及其主管部门对不属于审判和检察工作中的其他法律如何具体应用问题所做的解释；
+    （2）省、自治区、直辖市人民政府主管部门``对地方性法规``如何具体应用的问题所做的解释。
+
+### 3.司法解释
+    司法解释是指【国家最高司法机关】在适用法律、法规的过程中，对如何具体应用法律、法规的问题所做的解释。它包括：（1）审判解释；（2）检察解释；（3）审判、检察联合解释。
+
     注意：我国【法定的法律解释体制】从总体上看是以【全国人大常委会为主体】的分工配合体制。
 
 第四节 法律责任与法律制裁
@@ -564,7 +588,7 @@
     第二，法律应该以人为本，以人文关怀为终极价值。
     第三，法律义务的设定以是否侵害他人的权利为前提。
 
-4.宪法的 权力制约原则
+4.宪法的权力制约原则
     权力制约原则是指国家权力的各部分之间互相分立、互相监督、互相制衡以使公民的权
     利得到切实保障的原则。权力制约原则体现为两个方面：
     ①公民权利对国家权力的制约；
