--- a/2-1法理学.md
+++ b/2-1法理学.md
@@ -354,14 +354,16 @@
         （3）简易程序的适用。
 
 
-三、司法
-（一）司法的概念和特征
+# 三、司法
+## （一）司法的概念和特征
+
     司法，又称为法律适用或者司法适用，是指司法机关及其工作人员依照法定的职权和程
     序，运用法律规范处理具体刑事、民事、行政案件及违宪案件的活动。
     在我国，司法机关是指国家检察机关和审判机关。
     【人民检察院代表国家行使法律监督权】，
     【人民法院代表国家行使审判权】，【其他任何国家机关、社会组织和个人都不得行使国家司法权】。
-与立法、执法相比较，它具有以下特征：
+
+### 与立法、执法相比较，它具有以下特征：
     1.中立性。司法是一种裁判活动，要求法院居中裁判，不偏不倚地对待诉讼当事人和控
     辩双方，力求不受立场限制地做出准确判断。
     2.权威性。【司法机关的活动是以国家名义进行的】，司法裁决一旦发生法律效力，任何组
@@ -370,7 +372,7 @@
     必须由当事人的诉讼行为来启动。
     4.独立性。人民法院依法独立行使审判权，人民检察院依法独立行使检察权，【不受行政机关、社会团体和公民个人的干涉。】
 
-（二）我国司法的基本要求和原则
+## （二）我国司法的基本要求和原则
 1.我国司法的基本要求
 司法的基本要求是指由我国法的本质决定的，司法工作在质量和效率方面所应达到的标
 准，它包括【正确、合法、及时、公正、合理】等内容，这些标准也是我国长期来社会主义法律
