--- a/法律题.md
+++ b/法律题.md
@@ -238,6 +238,22 @@
     省、自治区、直辖市人民政府主管部门``对地方性法规``如何具体应用的问题所做的解释。
 
 
+##### 有关规范性文件清理制度表述，不正确的是(A)
+    A:县级政府每隔3年要进行一次规范性文件清理工作
+    B:对含有地方保护，行业保护内容的规范性文件，要修改或者废止
+    C:清理后未列入继续有效的文件目录的规范性文件，不得作为行政管理的依据
+    D:对相互抵制，依据缺失，以及不适应经济发展的规范性文件，要修改或者废止
+
+    注：县级政府每隔2年要进行一次规范性文件清理工作
+
+##### 有关规范性文件备案的表述，不正确的是(B)
+    A:县政府发布规范性文件后，应当自发布之日15日内，报上一级政府备案
+    B:县政府部门发布规范性文件后，应当自发布之日7日内，报上一级政府备案
+    C:规范性文件的备案制度是确保法制统一，政令畅通的重要举措
+    D:建立受理，处理公民，法人，其他组织提出的审查规范性文件建议的制度
+
+    注：县政府部门发布规范性文件后，应当自发布之日15日内，报上一级政府备案
+
 
 
 
