--- a/2-1法理学.md
+++ b/2-1法理学.md
@@ -413,28 +413,30 @@
     法律监督的【依据是宪法和法律】。
 5.法律监督的方式
     因监督主体和对象不同而有所不同。
-（三）法律监督的分类
-对法律监督可从不同角度进行分类，分类角度和类别大致如下：
-1.依监督主体的不同，可分为国家监督和社会监督。
-2.依监督对象的不同，可分为对行使国家权力或公共权力的国家机关、政治或社会组织
-的监督与对【其他社会关系主体】的监督。
-3.依监督内容不同，【可分为合法性监督与合理性监督】。
-4.依监督主体与对象所处地位和相互关系的不同，可分为【纵向监督和横向监督、内部监督和外部监督。】
-5.依监督所处阶段的不同，可分为【事前监督、事中（日常）监督和事后监督】，它们在不
-同的阶段上体现了法律监督的预防、控制、矫治功能。
 
-（四）国家监督
-1.国家监督的概念和特点
-所谓国家监督，即由国家机关以国家名义依法定职权和程序进行的【具有直接法律效力】的
-监督。这种监督因具体实施监督的机关不同，监督的内容和方式也可能不同，但作为国家监
-督有其共同特点：
-    （1）法定性。即国家监督的主体、客体、内容、范围、程序都应有明确、具体的法律
-    规定，监督主体只能依照法定权限和程序进行监督，不得超越法定权限，违反法定程序，滥
-    用监督权。
-    （2）严格程序性。国家监督是以国家名义进行的监督，作为一种制度性设置，有着严
-    格的程序要求。
-    （3）直接效力性。国家监督是以国家名义依照法定职权和程序进行的监督，具有国家
-    强制性和直接的法律效力，能直接引起法律后果。【被监督者必须接受并作出相应的行为】。
+### （三）法律监督的分类
+
+    对法律监督可从不同角度进行分类，分类角度和类别大致如下：
+    1.依监督主体的不同，可分为国家监督和社会监督。
+    2.依监督对象的不同，可分为对行使国家权力或公共权力的国家机关、政治或社会组织
+    的监督与对【其他社会关系主体】的监督。
+    3.依监督内容不同，【可分为合法性监督与合理性监督】。
+    4.依监督主体与对象所处地位和相互关系的不同，可分为【纵向监督和横向监督、内部监督和外部监督。】
+    5.依监督所处阶段的不同，可分为【事前监督、事中（日常）监督和事后监督】，它们在不
+    同的阶段上体现了法律监督的预防、控制、矫治功能。
+
+
+### （四）国家监督
+
+### 1.国家监督的概念和特点、
+
+    所谓国家监督，即由国家机关以国家名义依法定职权和程序进行的【具有直接法律效力】的
+    监督。这种监督``因具体实施监督的机关不同``，``监督的内容和方式也可能不同``，但作为国家监
+    督有其共同特点：
+    （1）法定性。即国家监督的主体、客体、内容、范围、程序都应有明确、具体的法律规定，监督主体只能依照法定权限和程序进行监督，不得超越法定权限，违反法定程序，滥用监督权。
+    （2）严格程序性。国家监督是以``国家名义``进行的监督，作为一种制度性设置，有着严格的程序要求。
+    （3）直接效力性。国家监督是以``国家名义``依照法定职权和程序进行的监督，具有``国家强制性和直接的法律效力``，能``直接引起法律后果``。【被监督者必须接受并作出相应的行为】。
+
 2.国家监督的种类
     依具体实施监督的机关不同，国家监督又可分为权力机关的监督、行政机关的监督和司
     法机关的监督三类。
@@ -471,47 +473,63 @@
 
     注意：我国【法定的法律解释体制】从总体上看是以【全国人大常委会为主体】的分工配合体制。
 
-第四节 法律责任与法律制裁
-一、法律责任
-（一）法律责任的含义
-法律责任是指因违反了法定义务或契约义务，或不当行使法律权利、权力所产生的，由
-行为人承担的【不利后果】。
-（二）违法行为及产生法律责任的其他原因
+### 第四节 法律责任与法律制裁
+
+### 一、法律责任
+### （一）法律责任的含义
+
+    法律责任是指因违反了法定义务或契约义务，或不当行使法律权利、权力所产生的，由
+    行为人承担的【不利后果】。
+
+### （二）违法行为及产生法律责任的其他原因
     1.违法行为。违法是指违反现行法的规定从而侵犯了法所保护的某种社会关系的行为。
     广义的违法行为，是指所有违反法律的行为，包括犯【罪行为和狭义的违法行为】。狭义的违法
     行为，也可以称为一般侵权行为，包括民事侵权行为和行政侵权行为等。
+
     2.法律责任的产生原因。除了违法行为以外，主要还有违约行为，即违反合同约定，没
-    有履行一定法律关系中作为的义务或不作为的义务。违约行为是产生民事法律责任的重要原
-    因。其次是法律规定，主要是指法律上规定的无过错责任或叫严格责任，即仅仅由于出现了
-    法律所规定的法律事实，就要承担某种赔偿责任，如高度危险作业致人损害。
-（三）法律责任的分类
-1.刑事责任
-（1）刑事责任是指行为人因其犯罪行为所必须承受的，由司法机关代表国家所确定的
-否定性法律后果。
-（2）刑事责任有如下特点：
-    ①刑事责任是犯罪人向国家所负的一种责任。
-    ②刑事法律是追究刑事责任的唯一法律依据。
-    ③刑事责任是一种惩罚性责任，因而是所有法律责任中最严厉的一种。
-    ④刑事责任通常是一种个人责任。一般来说，只有实施犯罪行为者本人才能承担刑事责任。
-2.民事责任
-    民事责任是由民法规定的对民事违法行为人所采取的一种以恢复被损害的权利为目的，
-    并与一定的民事制裁措施相联系的国家强制形式。
-    民事责任的特征主要包括：
-    ①民事责任具有国家强制性；
+    有履行一定法律关系中作为的义务或不作为的义务。
+    违约行为是产生民事法律责任的重要原因。
+    其次是法律规定，主要是指法律上规定的无过错责任或叫严格责任，即仅仅由于出现了法律所规定的法律事实，就要承担某种赔偿责任，如高度危险作业致人损害。
+
+
+### （三）法律责任的分类
+### 1.刑事责任
+
+    （1）刑事责任是指行为人因其犯罪行为所必须承受的，由司法机关代表国家所确定的
+    否定性法律后果。
+    （2）刑事责任有如下特点：
+        ①刑事责任是犯罪人向国家所负的一种责任。
+        ②刑事法律是追究刑事责任的唯一法律依据。
+        ③刑事责任是一种惩罚性责任，因而是所有法律责任中最严厉的一种。
+        ④刑事责任通常是一种个人责任。一般来说，只有实施犯罪行为者本人才能承担刑事责任。
+
+### 2.民事责任
+
+    民事责任是由民法规定的对民事违法行为人所采取的一种以``恢复被损害的权利``为目的，
+    并与一定的民事制裁措施相联系的``国家强制``形式。
+
+### 民事责任的特征主要包括：
+
+    ①民事责任具有``国家强制性``； ``没有强制性没人会赔偿给你！``
     ②承担民事责任的前提是违反了民事义务；
     ③民事责任以财产性责任为主，以非财产性责任为辅；
     ④民事责任是一种补偿性责任；
     ⑤民事责任是相对性的责任，是特定主体之间的责任。
-3.行政责任
-（1）行政责任是指因违反行政法或因行政法规定而应承担的法律责任。
-（2）行政责任的特点：
-    ①承担行政责任的主体是行政主体和行政相对人。
-    ②产生行政责任的原因是行为人的行政违法行为和法律规定的特定情况。
-    ③在通常情况下，行政责任实行过错推定的方法。
-    ④由于行政违法的多样性，决定了行政责任的承担方式多样化。
-4.违宪责任
+
+### 3.行政责任
+
+    （1）行政责任是指因违反行政法或因行政法规定而应承担的法律责任。
+    （2）行政责任的特点：
+        ①承担行政责任的主体是行政主体和行政相对人。
+        ②产生行政责任的原因是行为人的行政违法行为和法律规定的特定情况。
+        ③在通常情况下，行政责任实行过错推定的方法。
+        ④由于行政违法的多样性，决定了行政责任的承担方式多样化。
+
+### 4.违宪责任
     违宪责任，是指有关国家机关制定的某种法律和法规、规章，或者有关国家机关、社会
     组织或公民的活动与宪法规定相抵触而产生的法律责任。
+
+
 （四）法律责任归责的基本原则【责正效，选择正确的的学校，你今后的生活会很开心的】
 1.【责】任法定原则
 法律责任作为一种否定的法律后果应当由法律规范预先规定，包括在法律规范的逻辑结
@@ -598,12 +616,10 @@
 
 
 ### 执法原则和行政法基本原则
-（三）执法的原则
-    1.行政法治原则。合法性原则是现代法治国家对执法的基本要求，也是执法的最重要的
-    一项原则。
-    2.行政合理性原则。执法的合理性原则是指执法主体在执法活动中，特别在行使自由裁
-    量权进行行政管理时，必须做到适当、合理、公正，即符合法律的基本精神和目的，具有客
-    观、充分的事实根据和法律依据，与社会生活常理相一致。
+###（三）执法的原则
+
+    1.行政法治原则。合法性原则是现代法治国家对执法的基本要求，也是执法的最重要的一项原则。
+    2.行政合理性原则。执法的合理性原则是指执法主体在执法活动中，特别在行使自由裁量权进行行政管理时，必须做到适当、合理、公正，即符合法律的基本精神和目的，具有客观、充分的事实根据和法律依据，与社会生活常理相一致。
     3.行政效率原则。行政效率原则的具体贯彻和实现，包括以下三方面的内容：
         （1）时效限制的规定。
         （2）行为方式的时间上有先后顺序的规定。
