--- a/法律题.md
+++ b/法律题.md
@@ -254,7 +254,55 @@
 
     注：县政府部门发布规范性文件后，应当自发布之日15日内，报上一级政府备案
 
+##### 司法机关依法独立行使职权，的含义是：人民法院，人民检察院依法独立行使自己的职权，不受（C）
+    A:权利机关非法干涉
+    B:上级非法机关非法干涉
+    C:任何机关，社会团体，个人的非法干预
+    D:政党，社会团体，个人的非法干涉
+    注：应该是：不受行政机关、社会团体和公民个人的干涉，但是这题还是填C
 
+    ### 与立法、执法相比较，它具有以下特征：
+
+##### 执法的原则不包括（D）
+    A:合法原则
+    B:合理性原则
+    C:行政效率性原则
+    D:经济效益原则
+
+    我们并不是靠执法来维持国家的收入啊！
+    ###（三）执法的原则
+
+##### 国家监督不具有（B）
+    A:法定性
+    B:社会性
+    C:严格程序性
+    D:直接效力性
+    注：这是国家监督不是社会监督
+    
+
+    ### 1.国家监督的概念和特点、
+
+##### 区别正式解释和非正式解释的区别是（C）
+    A:解释的主体
+    B:解释的方法
+    C:是否具有法律上的约束力
+    D:解释的对象
+
+##### 法律责任的免除（C）
+    A:无责任
+    B:不负责任
+    C:有责任，但是出现法定条件，被部分或者全部免除
+    D:有责任，但是不受法律制裁
+
+    注：既然是免除，说明原来是有责任的，但是法律规定可以免除，部分免除的话，说明还是要受到法律的制裁！
+
+##### 民事责任的特征说法正确的是（C）
+    A:民事责任具有国家强制性 ``没有强制性没人会赔偿给你！``
+    B:民事责任以财产性责任为主
+    C:民事责任是一种惩罚性责任 ``补偿性责任``
+    D:承担民事责任的前提是违反了民事义务
+
+    ### 民事责任的特征主要包括：
 
 
 
