--- a/2-2宪法.md
+++ b/2-2宪法.md
@@ -137,18 +137,21 @@
 
     国体决定政体，但政体有相对的独立性，同样的国体可以有不同的政体形式。
     我国的国体是工人阶级领导的以工农联盟为基础的人民民主专政的社会主义国家，
-    我国的政体是以【民主集中制为组织原则和活动原则的】人民代表大会制度。
+    我国的政体是以【民主集中制为组织原则和活动原则的】人民代表大会``制度``。
 
     民主集中制在中国的具体表现是中共决策，政协参议，人大立法，政府执行。
     这一制度被西方学者约翰·奈斯比特在《大趋势》中称为具有中国特色的“纵向民主”。
 
-二、国家结构形式
-（一）国家结构形式的含义
-国家结构形式是指一国统治阶级根据什么原则、采取什么形式划分国家主权范围内的组
-成单位及其权限的国家制度。
-国家结构形式与政权组织形式同属于国家形式，二者存在密切联系，
-【但前者侧重解决一国主权空间区域的权限划分问题，着重体现一国国家权力体系的纵向结构；】
-【而后者侧重解决一国主权本源意义上的权力主体的职能划分问题，着重体现一国国家权力体系的横向结构。】
+### 二、国家结构形式
+###（一）国家结构形式的含义
+
+    国家结构形式是指一国统治阶级根据什么原则、采取什么形式划分国家主权范围内的组
+    成单位及其权限的国家制度。
+
+    国家结构形式与政权组织形式同属于国家形式，二者存在密切联系，
+
+    【但前者侧重解决一国主权空间区域的权限划分问题，着重体现一国国家权力体系的纵向结构；】
+    【而后者侧重解决一国主权本源意义上的权力主体的职能划分问题，着重体现一国国家权力体系的横向结构。】
 
 （二）国家结构形式的类型
 一般而言，当今世界主要有两种国家结构形式，即单一制和联邦制。
@@ -166,17 +169,27 @@
 成；（4）联邦与其组成单位的权限划分由联邦宪法规定，联邦的权力来自其组成单位的让
 渡，凡未授予联邦的权力由其组成单位保留；（5）在国际交往中，联邦一般为唯一的国际
 法主体，当然也有极少数联邦国家允许其组成单位与外国签定某些方面的条约。
-（三）我国国家结构形式
-    我国的国家结构形式是单一制。【单一制的国家特征我国都具备】：全国只有一部宪法；只
-    有一套统一的中央机关体系；公民只有一个国籍；中央人民政府是我国对外交往的唯一国际
-    法主体；地方所行使的权力源于中央通过立法的授予。
-同时我国的单一制又有自己的特点：
+
+
+###（三）我国国家结构形式
+
+    我国的国家结构形式是单一制。【单一制的国家特征我国都具备】：
+    全国只有一部宪法；
+    只有一套统一的中央机关体系；
+    公民只有一个国籍；
+    中央人民政府是我国对外交往的唯一国际法主体；
+    地方所行使的权力源于中央通过立法的授予。
+
+### 同时我国的单一制又有自己的特点：
+
     1.【我国没有实行一般意义上的地方自治制度】，中央和地方是领导与被领导的关系，
     【地方在法律上不具有与中央平等的地位。】
-    2.为处理多民族的关系，实行民族区域自治制度，赋予民族区域自治地方的自治机关以
-    自治权。
+    2.为处理多民族的关系，实行民族区域自治制度，赋予民族区域自治地方的自治机关以自治权。
     3.为了解决历史遗留问题，在香港、澳门实行“一国两制”，建立了特别行政区，允许特
     别行政区保留原有的资本主义制度和生活方式，【并享有高度的自治权】。
+
+
+
 
 第三节 公民的基本权利和义务
 一、公民的概念
@@ -215,40 +228,52 @@
     D:依法组成社会团体，进行社会活动的自由
 
 
-3.宗教信仰自由的权利。我国宪法第 36 条规定：―中华人民共和国公民有宗教信仰自由。
-任何国家机关、社会团体和个人不得强制公民信仰宗教或者不信仰宗教，不得歧视信仰宗教
-的公民和不信仰宗教的公民。
-4.人身权利。它是指公民依法享有的与人身直接相关的权利。公民基本权利的重要部分。
-包括人身自由不受侵犯，人格尊严不受侵犯，住宅不受侵犯，通信自由和通信秘密不受侵
-犯等。其中，公民的人身自由不受侵犯是指公民不受非法逮捕、拘禁，不被非法剥夺、限制
-自由及非法搜查身体的自由。
-5.社会经济权利。它是指公民根据宪法规定享有的具有物质经济利益的权利，是公民实
-现基本权利的物质保障。主要包括：【劳动的权利，休息的权利，获得物质帮助的权利】。
-6.文化教育权利。是公民按照宪法的规定，在文化和教育领域享有的权利和自由。主要
-包括：【受教育的权利，进行科学研究、文艺创作和其他文化活动的自由】。
-7.妇女、老人、儿童受国家的保护。妇女享有同男子平等的权利，禁止破坏婚姻自由，
-禁止虐待老人、妇女和儿童。
-8.【国家保护华侨的正当权益，保护归侨、侨眷的合法权益】。
+### 3.宗教信仰自由的权利。
+    我国宪法第 36 条规定：―中华人民共和国公民有宗教信仰自由。
+    任何国家机关、社会团体和个人不得强制公民信仰宗教或者不信仰宗教，不得歧视信仰宗教的公民和不信仰宗教的公民。
 
-三、公民的基本义务
-1.维护国家统一和民族团结
-2.遵守宪法和法律，保守国家秘密，爱护公共财产，遵守劳动纪律，遵守公共秩序，尊重社会公德
-3.维护祖国安全、荣誉和利益
-4.依法服兵役和参加民兵组织
+### 4.人身权利。
+    它是指公民依法享有的与人身直接相关的权利。公民基本权利的重要部分。
+    包括人身自由不受侵犯，人格尊严不受侵犯，住宅不受侵犯，通信自由和通信秘密不受侵犯等。其中，公民的人身自由不受侵犯是指公民不受非法逮捕、拘禁，不被非法剥夺、限制自由及非法搜查身体的自由。
 
-（1）对服兵役的限制性规定
+### 5.社会经济权利。
+    它是指公民根据宪法规定享有的具有物质经济利益的权利，是公民实
+    现基本权利的物质保障。主要包括：【劳动的权利，休息的权利，获得物质帮助的权利】。
+
+### 6.文化教育权利。是公民按照宪法的规定，在文化和教育领域享有的权利和自由。
+    主要包括：【受教育的权利，进行科学研究、文艺创作和其他文化活动的自由】。
+### 7.妇女、老人、儿童受国家的保护。
+    妇女享有同男子平等的权利，禁止破坏婚姻自由，禁止虐待老人、妇女和儿童。
+### 8.【国家保护华侨的正当权益，保护归侨、侨眷的合法权益】。
+
+
+### 三、公民的基本义务
+
+    1.维护国家统一和民族团结
+    2.遵守宪法和法律，保守国家秘密，爱护公共财产，遵守劳动纪律，遵守公共秩序，尊重社会公德
+    3.维护祖国安全、荣誉和利益
+    4.依法服兵役和参加民兵组织
+
+
+###（1）对服兵役的限制性规定
+
     ①依法被剥夺政治权利的人不得服兵役；
     ②对被羁押的人不征集服兵役；
     ③因身体条件不适合的免服兵役；
     ④对全日制学生和是家庭唯一劳动力的人实行缓征。
-（2）我国公民服兵役义务的形式
+
+###（2）我国公民服兵役义务的形式
+
     ①服现役——参加人民解放军或武装警察部队；
     ②服预备役——参加民兵组织或经过预备役登记；
     ③参加军训——高等院校或高级中学的学生的军事训练；
     ④承担优抚费——人民群众对义务兵家属、民兵和其他预备役人员承担一定的优抚费或者误工补贴。
-5.依法纳税
+
+### 5.依法纳税
     此外，宪法还规定，公民劳动的义务、受教育的义务、夫妻双方实行计划生育的义务、
     父母抚养教育未成年子女的义务、成年子女赡养扶助父母的义务。
+
+
 第四节 我国的国家机构
 一、全国人民代表大会及其常务委员会
 （一）全国人民代表大会
