--- a/法律题.md
+++ b/法律题.md
@@ -304,6 +304,88 @@
 
     ### 民事责任的特征主要包括：
 
+##### 我国的政权组织形式（B）
+    A:人民代表大会
+    B:人民代表大会制
+    C:民主集中制
+    D:全国人大和地方人大
+
+    # 一、我国的国体和政体
+
+##### 我国公民的基本义务（A）
+    A:见义勇为
+    B:尊重社会公德
+    C:遵守宪法和法律
+    D:维护国家统一和全国各民族的团结
+
+    ### 三、公民的基本义务
+
+##### 全国和地方各级人民代表大会的代表应当具有广泛性，应该有适当数量的基层代表，其中基层代表不包括（D）
+    A:工人
+    B:农民
+    C:知识分子
+    D:军人
+
+    （1）全国人民代表大会的代表，由省、自治区、直辖市的人民代表大会和人民解放军（军队，军人）选举产生
+    （2）全国人民代表大会和地方各级人民代表大会的代表应当具有广泛的代表性，应当有适当数量的基层代表，特别是工人、农民和知识分子代表；
+    （3）应当有适当数量的妇女代表，并逐步提高妇女代表的比例。
+
+##### （C）国实行刚性宪法
+    A:新西兰
+    B:加拿大
+    C:日本
+    D:伊朗  
+
+
+##### 把宪法分为刚性宪法和柔性宪法是以(B)。
+    A．制定宪法的机关为标准
+    B．有无严格的制定、修改机关和程序为标准
+    C．有无统一的法典形式为标准
+    D．有无最高法律效力为标准    
+
+##### 中国历史上第一部宪法性文件是(B)
+    A:《重大信条十九条》    清政府最后一部宪法性文件
+    B:《钦定宪法大纲》      第一部宪法性文件
+    C:《中华民国临时约法》  唯一一部资产阶级性质的宪法
+    D:《中华苏维埃宪法大纲》
+
+
+##### 对服兵役的限制性规定错误的是（C）
+    A:依法被剥夺政治权利的人不得服兵役
+    B:对被羁押的人不征集服兵役
+    C:因身体条件不适合的实行缓征；
+    D:对全日制学生和是家庭唯一劳动力的人实行缓征。
+
+    注：身体不适合怎么打仗，不需要你服兵役
+
+    ###（1）对服兵役的限制性规定
+
+##### 国务院《全面推进依法行政实施纲要》，下列不属于深化行政体制改革方面的内容的是(CE)
+    A、推进综合执法试点
+    B、减少行政执法层次，适当下移执法重心
+    C、健全行政执法案卷评查制度
+    D、建立权责明确、行为规范、监督有效、保障有力的行政执法体制
+    E、严格按照法定程序行使权力，履行职责
+
+    ### 19．深化行政执法体制改革。
+
+##### 《政府信息公开条例》所说的信息是（B）
+	A、有关国家行政法规、规章和规范性文件的信息
+	B、行政机关在履行职责过程中制作或者获取的，以一定形式记录、保存的信息
+	C、国民经济和社会发展规划、专项规划、区域规划及相关政策的信息
+	D、涉及公民、法人或者其他组织切身利益的信息
+
+    《中华人民共和国政府信息公开条例》：
+    第二条　本条例所称政府信息，是指行政机关在履行职责过程中制作或者获取的，以一定形式记录、保存的信息。
+
+##### 行政机关应当建立健全政府信息发布(D)机制
+    A:联系
+    B:统一
+    C:规范
+    D:协调
+    
+    ### 第七条
+
 
 
 
