--- a/2-1法理学.md
+++ b/2-1法理学.md
@@ -458,8 +458,8 @@
     从广义上说，则泛指所有依法有权制定法律、法规的国家机关或其授权机关，对自己制定的法律、法规进行的解释。
 
     这里所说的立法解释是广义的。它包括：
-    （1）全国人大常委会对宪法的解释，以及对需要进一步明确界限或作补充规定的法律的解释；
-    （2）国务院及其主管部门对自己制定的需要进一步明确界限或作补充规定的行政法规的解释；
+    （1）全国人大常委会对宪法的解释，以及对需要·``进一步明确界限``或作补充规定的法律的解释；
+    （2）国务院及其主管部门对自己制定的需要``进一步明确界限``或作补充规定的行政法规的解释；
     （3）省、自治区、直辖市和其他有权制定地方性法规的地方人大常委会对其制定的``需要进一步明确界限``或``作补充规定的地方性法规``的解释。
 
 ### 2.行政解释
