--- a/2-3主要实体法.md
+++ b/2-3主要实体法.md
@@ -135,34 +135,61 @@
     罪的特点在于：这种犯罪行为是经单位决策机构决定或者负责人员决定实施的，这是单位犯
     罪与个人犯罪在客观上的重要区别。
     ④单位犯罪必须是法律有规定的才能构成。
-五、基本犯罪类型和职务犯罪
-（一）基本犯罪类型
-根据我国刑法的规定，按照同类客体划分，犯罪共分为 10 大类，分别是：危害国家安
-全罪、危害公共安全罪、破坏社会主义经济秩序罪、侵犯公民人身权利、民主权利罪、侵犯
-财产罪、妨害社会管理秩序罪、危害国防利益罪、贪污贿赂罪、渎职罪、军人违反职责罪。
-（二）职务犯罪
-1.贪污贿赂罪
+
+### 五、基本犯罪类型和职务犯罪
+
+###（一）基本犯罪类型
+
+    根据我国刑法的规定，按照同类客体划分，犯罪共分为 10 大类，分别是：危害国家安
+    全罪、危害公共安全罪、破坏社会主义经济秩序罪、侵犯公民人身权利、民主权利罪、侵犯
+    财产罪、妨害社会管理秩序罪、危害国防利益罪、贪污贿赂罪、渎职罪、军人违反职责罪。
+
+###（二）职务犯罪
+### 1.贪污贿赂罪
+
     贪污贿赂罪是指国家工作人员和其他依法从事公务的人员，利用职务之便，非法占有、
     使用公私财物的行为。贪污贿赂罪主要包括以下几个罪名：
-（1）贪污罪。【亲切的骗】
+
+###（1）贪污罪。【亲切的骗】
+
     指国家工作人员利用职务上的便利，侵吞、窃取、骗取或者以其他手段
     非法占有公共财物的行为。另外，受国家机关、国有公司、企业、事业单位、人民团体委托
     管理、经营国有财产的人员，利用职务上的便利，侵吞、窃取、骗取或者以其他手段非法占
     有国有财物的，以贪污罪论。
-（2）挪用公款罪。【个人非法，较大的营利】
+    
+###（2）挪用公款罪。【个人非法，较大的营利】
+
     指国家工作人员利用职务上的便利，挪用公款归个人使用，进行非
     法活动的，或者挪用公款数额较大、进行营利活动的，或者挪用公款数额较大超过三个月未还的行为。
-（3）受贿罪。
+
+###（3）受贿罪。
+
     指国家工作人员利用职务上的便利，索取他人财物，或者非法收受他人财物，【为他人谋取利益的行为】。
-（4）行贿罪。指为谋取不正当利益，给予国家机关工作人员财物的行为。
-（5）向单位行贿罪。指个人或者单位为谋取不正当利益，给予国家机关、国有公司、
-企业、事业单位、人民团体以财物，或者在经济往来中，违反国家规定，给予各种名义的回
-扣、手续费的行为。
-（6）介绍贿赂罪。指在行贿人和受贿人之间进行沟通撮合，使行贿、受贿得以实现的行为。
-（7）巨额财产来源不明罪。指国家工作人员的财产或者支出明显超过合法收入，差额巨大，而本人又不能说明其来源合法的行为。
-（8）隐瞒不报境外存款罪。
+
+###（4）行贿罪。
+
+    指为谋取不正当利益，给予国家机关工作人员财物的行为。
+
+###（5）向单位行贿罪。
+
+    指个人或者单位为谋取不正当利益，给予国家机关、国有公司、
+    企业、事业单位、人民团体以财物，或者在经济往来中，违反国家规定，给予各种名义的回
+    扣、手续费的行为。
+
+###（6）介绍贿赂罪。
+
+    指在行贿人和受贿人之间进行沟通撮合，使行贿、受贿得以实现的行为。
+
+###（7）巨额财产来源不明罪。
+
+    指国家工作人员的财产或者支出明显超过合法收入，差额巨大，而本人又不能说明其来源合法的行为。
+
+###（8）隐瞒不报境外存款罪。
+
     指国家工作人员违反国家外汇管理法规和行政管理制度，将外汇存人境外银行，数额较大，隐瞒不报的行为。
-（9）集体私分国有资产罪。
+
+###（9）集体私分国有资产罪。
+
     指国家机关、国有公司、企业、事业单位、人民团体，违反国家规定，将应当上缴国家的罚没财物或者其他国有财产，以单位名义集体私分给个人，数额较大的行为。
 
     ### 我国《刑法》规定的贪污贿赂罪罪名有（ABC）
@@ -243,33 +270,43 @@
     行政效率原则的含义是：行政机关在行使职权时，应当尽可能用最快的时间、最少的人
     员、最低的消耗办最多的事，取得最大的社会和经济效益。
 
-二、行政主体和行政相对人
-（一）行政法律关系
+### 二、行政主体和行政相对人
+
+### （一）行政法律关系
+
     行政法律关系包括行政主体与行政主体之间，因行政主体行使行政职权而形成的权利义务关系。
     任何行政法律关系都由【行政法律关系主体、行政法律关系客体及行政法律关系内容】三个部分构成。
-（二）行政主体
-行政主体指参加行政法律关系，依法拥有行政职权，能以自己名义独立行使职权并承担
-相应法律责任的组织。行政主体具有下列三个特征：
-    1.行政主体是享有国家行政权力，实施行政活动的组织。这是行政主体与【其他国家机关、组织的区别所在】。
-    2.行政主体是能以自己的名义行使行政权的组织。这是【行政主体与行政机关内部】的组成
-    机构和【受行政机关委托执行某些行政管理任务的组织的区别】。
-    3.行政主体是能够独立对外承担其行为所产生的法律责任的组织。这是行政主体具有独
-    立法律人格的具体表现，也是一个组织成为行政主体的必备条件。
-    在我国，行政主体包括【国家行政机关和法律、法规授权的组织】
-（三）行政相对人
+
+### （二）行政主体
+
+    行政主体指参加行政法律关系，依法拥有行政职权，能以自己名义独立行使职权并承担
+    相应法律责任的组织。行政主体具有下列三个特征：
+        1.行政主体是享有国家行政权力，实施行政活动的组织。这是行政主体与【其他国家机关、组织的区别所在】。
+        2.行政主体是能以自己的名义行使行政权的组织。这是【行政主体与行政机关内部】的组成
+        机构和【受行政机关委托执行某些行政管理任务的组织的区别】。
+        3.行政主体是能够独立对外承担其行为所产生的法律责任的组织。这是行政主体具有独
+        立法律人格的具体表现，也是一个组织成为行政主体的必备条件。
+        在我国，行政主体包括【国家行政机关和法律、法规授权的组织】
+
+### （三）行政相对人
+
     行政相对人，是指行政管理法律关系中与行政主体相对应的另一方当事人，即行政主体
     的行政行为影响其权益的个人或组织。
     在我国，行政相对人主要有以下几种：公民；法人，包括机关法人、事业法人、企业法
     人和社团法人等；不具有法人资格的其他组织；外国组织和个人等。
-三、行政行为
-（一）行政行为概述
+
+### 三、行政行为
+
+### （一）行政行为概述
+
     行政行为是指行政主体在实施行政管理活动、行使行政职权过程中所作出的具有法律意义的各种行为。
     行政行为必须具备若干构成要件：
     ①主体要件，即行为主体必须是拥有行政职权或一定行政职责的国家行政机关，或者法律、法规授权组织或者行政机关委托的组织或个人。
     ②公务要件，即行政行为是行政组织实际行使行政职权而作出的行为。
     ③法律后果要件，即行政行为是指对外以实现某种法律后果为目的的行为。
 
-行政行为的主要特征有：
+### 行政行为的主要特征有：
+
     1.基于法律的国家强制性
         行政行为由国家强制力来保障其实施。这种国家强制力也是行政权的基本属性。
     2.法律许可范围内的自由裁量性
@@ -285,7 +322,9 @@
         行政行为以无偿为原则，以有偿为例外。行政主体所追求的是国家和社会公共利益，其
         对公共利益的维护和分配，应当都是无偿的。当然，当特定行政相对人承担了特别公共负担，
         或分享了特殊公共利益时，则应是有偿的。
+
 ##（二）行政行为分类
+
     根据不同的标准，可以将行政行为分为不同的种类。
         ①根据行政行为针对的对象可以把行政行为分为外部行政行为和内部行政行为；
         ②根据行政行为的对象是否特定，可以分为抽象行政行为与具体行政行为；
