--- a/法律题.md
+++ b/法律题.md
@@ -386,6 +386,46 @@
     
     ### 第七条
 
+##### 最高人民法院是国家的（A）
+    A:最高审判机关
+    B:专门审判机关
+    C:最高司法机关
+    D:特别审判机关
+
+    ## （一）司法的概念和特征
+
+##### 享有国家政权，能以自己的名义行驶政权，并能独立承担由此而产生的法律责任的组织为（A）
+    A:行政主体
+    B:行政客体
+    C:行政法律
+    D:行政相对人
+
+    ### （二）行政主体
+
+##### 行政机关对自己制定的法律所做的解释属于（B）
+    A:立法解释
+    B:行政解释
+    C:司法解释
+    D:使用解释
+
+    ### 2.行政解释
+
+##### 行政机关在行驶职权时，应当平等的适用法律规范，不得因人因时因地而异，对相同的事实应该相同对待（B）
+    A:行政合法性原则
+    B:行政合理性原则
+    C:行政应急性原则
+    D:信赖保护性原则
+
+    ###（三）执法的原则
+
+##### 李某是某国有企业财务人员，私自动用了一笔数额较大的公款去炒股，一个月后被发现，其行为属于（B）
+    A:贪污
+    B:挪用公款罪
+    C:滥用职权罪
+    D:职务侵占罪
+
+    ###（二）职务犯罪
+    ###（2）挪用公款罪。【个人非法，较大的营利】
 
 
 
