--- a/法律题-2.md
+++ b/法律题-2.md
@@ -142,23 +142,429 @@
     C:动产和不动产
     D:流通物和非流通物
              
-##### 
-    A:
-    B:
-    C:
-    D:                    
-##### 
-    A:
-    B:
-    C:
-    D:                    
-##### 
-    A:
-    B:
-    C:
-    D:                    
+##### 下列有关食品安全标准的说法，有误的是（）
+    A:食品安全标准是强制执行的标准
+    B:食品安全标准应当供公众免费查阅
+    C:没有食品安全国家标准的，可以指定食品安全地方标准
+    D:企业标准应当报县级以上卫生行政部门备案，本企业内部适用                    
+##### 下列有关食品安全的说法，有误的是（）
+    A:国家对食品生产经营实行许可制度
+    B:食品进货查验记录应当真实，保存期限不得少于一年
+    C:农民个人销售其自产的食用农产品，不需要取得食品流通的许可
+    D:食品生产经营人员每年应当进行健康检查，取得健康证明后方可参加工作
+                        
+##### 下了有关食品生产经营与食品安全的说法，不对的是（）
+    A:食品广告的内容不得涉及疾病预防，治疗功能
+    B:地方各级人民政府鼓励食品规模化生产和连锁经营，配送
+    C:食品安全监督管理部门可以免检国内著名企业生产的畅销食品
+    D:食品安全生产者认为生产的食品，不符合食品安全标准的应当召回的，应当立即召回                    
 
+##### 下列有关行政监察的表述，错误的是（）
+    A:监察机关不能对国家行政机关进行监察
+    B:监察机关依法行使职权，不受其他行政部门的干涉
+    C:监察机关对监察对象执法，廉政，效能情况进行监察
+    D:在提请任命县监察局局长决定之前，必须经上一级监察机关同一
+    
+##### 纳税人开始并销售矿产的，其资源税的征收数量为（）
+    A:开采数量
+    B:实际产量
+    C:计划产量
+    D:销售数量
+    
+##### 有关宅基地的表述，不正确的是（）
+    A:农村村民一户只能拥有一处宅基地
+    B:农村村民住宅用地由乡镇人民政府批准
+    C:农村村民建住宅应当符合乡镇土地利用总体规划
+    D:农村村民出卖，出租住房后再申请宅基地的，不予批准
+    
+    
+##### 下列有关我国继承法的表述，不正确的是（）
+    A:丧偶而喜爱对公婆尽了主要赡养义务的，可以作为第一顺序继承人
+    B:继承权纠纷提起诉讼的时效为2年
+    C:养子女是第一顺序继承人
+    D:继承人可以作为遗嘱见证人
+        
+ ##### 下列有关劳动合同的表述，错误的是（）
+     A:用人单位在修改劳动报酬时，应经职工代表大会或者全体职工讨论，提出方案和意见，与工会或者职工代表平等协商确定
+     B:用人单位自用工之日起即与劳动者建立劳动关系
+     C:试用期在劳动合同期限之外
+     D:劳动者在试用期的工作不得低于本单位相同岗位最低档工资或者劳动合同约定
+     
+##### 对县级以上地方各级人民政府工作部门的具体行政行为不服的，申请人（）
+    A:应向该部门的本级人民政府申请行政复议
+    B:应向上一级主管部门申请行政复议
+    C:应向该部门申请行政复议
+    D:可以向该部门的本机人民振幅或者上一级的主管部门申请行政复议
+    
+##### 民事责任的承担方式不包括（）
+    A:更换
+    B:罚款
+    C:赔礼道歉
+    D:排查妨碍
+    
+##### 下列有关法人的表述，错误的是（）
+    A:法人以它的主要办事机构所在地位住所
+    B:代表法人行使职权的负责人，是法人的法定代表人
+    C:我国无社会团体法人
+    D:法人能够独立承担民事责任
+    
+##### 下列有关法人的表述，错误的是（）
+    A:全民所有制企业法人以企业所有的财产承担民事责任
+    B:企业法人应当在核准登记的经营范围内从事经营
+    C:有独立经费的机关从成立之日起，具有法人资格
+    D:企业法人的分立，合并，他的权利和义务由变更后的法人享有和承担
+         
+##### 下列有关合同的表述不正确的是（）
+    A:合同是平等主体的当事人双方或者多方实施的民事法律行为
+    B:合同是体现当事人双方或者多方意思表示一致的协议
+    C:合同是当事人设立，变更，终止债权债务关系的协议
+    D:我国现行《合同法》也适用于监护协议
+         
+##### 下列有关合同的表述不正确的是（）
+    A:贷款人可以按照约定检查，监督借款的使用情况
+    B:对借款期限没有约定的，贷款人可以催告借款人随时返还
+    C:借款人未按照约定的借款用途使用借款的，贷款人可以解除合同
+    D:自然人之间的借款合同约定的借款利率不得违反国家有关限制借款利率的规定
+         
+##### 有关租赁合同的表述，不正确的是（）
+    A:当事人租赁房屋未采用书面形式的，视为不定期租赁
+    B:租赁期限不得超过15年
+    C:承租人按照租赁物的性质使用租赁物，致使租赁物受到损耗的，不承担损害赔偿责任
+    D:租赁物在租赁期间发生所有权变动的，不影响租赁合同的效力
+         
+##### 下列有关赠与合同的表述，不正确的是（）
+    A:凡赠与人在赠与财产的权利转移之前都可用撤销赠与
+    B:因赠与人重大过失，致使赠与财产损毁的，赠与人应当承担损害赔偿责任
+    C:具有扶贫性质的赠与合同，赠与人不交付赠与财产的，受赠人可以要求交付
+    D:非附义务赠与的财产有瑕疵的，赠与人不承担责任
+         
+##### 下列（）情形，劳动者可以解除劳动合同
+    A:用人单位调整工作内容的
+    B:用人单位与劳动者约定试用期的
+    C:用人单位与劳动者约定保密事项的
+    D:用人单位为依法为劳动者缴纳社会保险费的
+         
+##### 行政合同的当事人一方必须是（）
+    A:行政主体
+    B:行政组织
+    C:行政机关
+    D:行政法律主体
+         
+##### （）属于消费税的征收范围
+    A:电动汽车
+    B:高尔夫车
+    C:小轿车
+    D:卡丁车
+         
+##### 甲从商城狗的电视机后，因质量为题电视机爆炸，炸伤甲，甲可请求商城承担何种民事责任（）
+    A:仅请求侵权责任
+    B:仅请求违约责任
+    C:有权请求侵权责任和违约责任
+    D:有权请求侵权责任或违约责任
+         
+##### 甲在商场够得一台“多功能食品加工机”，提出退货，商场答复“该产品说明书未就其使用性能作出明确说明，概不负责”，对此，正确的是（）
+    A:甲只能向生产者要求退换
+    B:甲应当要求销售者给予退换
+    C:因未当场认真检验商品，所以甲某不能要求退换
+    D:甲某可以选择向销售者或者生产者要求退换并给予赔偿
+         
+##### 有限责任公司的组织机构不包括（）
+    A:职工代表大会
+    B:股东会
+    C:董事会
+    D:监事会
+         
+##### 以下不符合我国企业法律规定的是（）
+    A:有限合伙人至少应当有一个普通合伙人
+    B:有限合伙人可以以劳务出资
+    C:新合伙人对入伙前的合伙企业债务承担无限连带责任
+    D:补充合伙协议，一般应经过全体合伙人的一致同意
+         
+##### 李某担任某上市公司总经理期间，半年内买卖该公司股票获利300万元，该300万元应当（）
+    A:归李某所有
+    B:归该公司所有
+    C:由证监会没收
+    D:由李某和该公司共有
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
+##### 
+    A:
+    B:
+    C:
+    D:
+         
 
+    
+            
 A:
 B:
 C:
