--- a/2-1法理学.md
+++ b/2-1法理学.md
@@ -221,32 +221,38 @@
 
 
     
-五、法律体系与法系
-（一）法律体系
-法律体系是指由一国现行的【全部法律规范】按照不同的【法律部门分类】组合而形成的一个
-呈体系化的有机联系的统一整体。
-依照【法律调整的对象和调整方法】的不同，可以将法律划分成不同的法律部门。各个法律
-部门构成一国法律的整体，形成法律体系的基本框架。
-我国当代社会主义的法律体系是由宪法、行政法、刑法、民法、经济法、商法、程序法
-等基本法律部门构成。
-【先行行民经商城】
-（二）法系
-法系是在对【各国法律制度的现状和历史渊源进行比较研究】的过程中形成的概念。
-当代世界主要法系有三个：大陆法系、英美法系、以前苏联和东欧国家的法律为代表的社会主义法
-系。其他的法系还有伊斯兰法系、印度法系、中华法系、犹太法系、非洲法系等。
+### 五、法律体系与法系
 
-对资本主义法影响最大的是大陆法系和英美法系。
-大陆法系，又称【民法法系、罗马法系、法典法系、罗马－德意志】法系，是以【罗马法】为基
-础而发展起来的法律的总称。
-大陆法系【最先产生于欧洲大陆】，以【罗马法为历史渊源】，以民法为典型，以法典化的成文法为主要形式。
+###（一）法律体系
 
-英美法系，又称普通法法系、英国法系，是以英国自中世纪以来的法律，特别是它的普
-通法为基础而发展起来的法律的总称。英美法系首先起源于 11 世纪诺曼人入侵英国后逐步
-形成的以判例形式出现的普通法。
+    法律体系是指由一国现行的【全部法律规范】按照不同的【法律部门分类】组合而形成的一个
+    呈体系化的有机联系的统一整体。
+    依照【法律调整的对象和调整方法】的不同，可以将法律划分成不同的法律部门。各个法律
+    部门构成一国法律的整体，形成法律体系的基本框架。
+    我国当代社会主义的法律体系是由宪法、行政法、刑法、民法、经济法、商法、程序法
+    等基本法律部门构成。
+    【先行行民经商城】
+
+###（二）法系
+
+    法系是在对【各国法律制度的现状和历史渊源进行比较研究】的过程中形成的概念。
+    当代世界主要法系有三个：大陆法系、英美法系、以前苏联和东欧国家的法律为代表的社会主义法
+    系。其他的法系还有伊斯兰法系、印度法系、中华法系、犹太法系、非洲法系等。
+
+    对资本主义法影响最大的是``大陆法系和英美法系``。
+    大陆法系，又称【民法法系、罗马法系、法典法系、罗马－德意志】法系，是以【罗马法】为基
+    础而发展起来的法律的总称。
+    大陆法系【最先产生于欧洲大陆】，以【罗马法为历史渊源】，以民法为典型，以法典化的成文法为主要形式。
+
+    英美法系，又称``普通法法系、英国法系``，是以英国自中世纪以来的法律，特别是它的普
+    通法为基础而发展起来的法律的总称。英美法系首先起源于 11 世纪诺曼人入侵英国后逐步
+    形成的以判例形式出现的普通法。
 
 # 六、法的效力
+
 ##（一）空间上的效力
-    在我国，凡是中央国家机关制定的法律、行政法规和其他规范性法律文件，除有特别规
+
+    在我国，凡是``中央国家机关制定``的法律、行政法规和其他规范性法律文件，除有特别规
     定外，一经公布施行，就在我国全部领域内发生效力。
     地方政权机关制定和颁布的规范性法律文件，【只在所辖的地区内】生效。
 
@@ -273,37 +279,57 @@
     第三，我国公民在我国领域以外，原则上也应该适用我国法律，法律有特别规定的按法律规定。（属人管辖）
     第四，外国人在我国领域外，如果侵害了我国国家或公民的权益或者与我国公民、法人和其他组织发生法律交往关系，也可以适用我国法律。（保护管辖）
 
-第二节 法治理论
-一、法治的含义
-（一）法治的概念
+### 第二节 法治理论
+
+### 一、法治的含义
+
+###（一）法治的概念
+
     法治【相对于人治而言】，是以【民主政治与市场经济】为基础，以【法律至上为核心的】一种治理国家的方略。
-（二）法治的特征
+
+###（二）法治的特征
+
     法治是现代行之有效的、首选的治理社会、管理国家之道。相对于其他治理方略和模式
     而言，具有自身的特征：
-    1.法治是一种宏观的治国方略。作为一种治国方略，它是指一个国家在多种社会控制手
-    段面前选择以法律为主的手段进行控制，而不是其它手段，即―依法治国。
-    2.法治是一种【民主基础上的制度】模式。法治社会需要一整套完备的法律制度，【但有了法律制度并不一定就是法治社会】。通常所说的法制并不必然是民主的，它完全可以为专制制度服务。
+### 1.法治是一种宏观的治国方略。
+
+        作为一种治国方略，它是指一个国家在多种社会控制手
+        段面前选择以法律为主的手段进行控制，而不是其它手段，即―依法治国。
+
+### 2.法治是一种【民主基础上的制度】模式。
+
+    法治社会需要一整套完备的法律制度，【但有了法律制度并不一定就是法治社会】。通常所说的法制并不必然是民主的，它完全可以为专制制度服务。
     而法治正是指与民主相结合的法制模式，法律通过民主的手段制定，【法律首要的目的是保护人民的权利】。
-    3.法治是一种理性的办事原则。法律是人们事先设定的规则，具有稳定性、连续性、普
+
+### 3.法治是一种理性的办事原则。法律是人们事先设定的规则，具有稳定性、连续性、普
+
     遍性和一致性，在制定法律之后，任何人和组织均受既定法律规则的约束，即【依法办事】。
-    4.法治还是一种理想的社会秩序。法治所追求的目标是一种理想的社会结构和社会秩
+
+### 4.法治还是一种理想的社会秩序。
+    
+    法治所追求的目标是一种理想的社会结构和社会秩
     序，因此它必然不是一个一成不变的确定状态，而是一个不断探索和不断实践的过程，【具有由低到高发展的阶段性】。
 
-二、法治的基本精神
-（一）良法之治
+### 二、法治的基本精神
+### （一）良法之治
+
     良法是符合人类道德良知、体现人类理性、体现社会正义的法，即通过民主的手段制定
     科学的体现人民意志的法律是一个基本的前提。
-（二）法律至上
+
+### （二）法律至上
+
     法律至上是指法律在国家社会生活中具有最高权威，即当法律与权力发生冲突时，应当
     服从法律而不是权力者个人的意志。
-（三）权利本位
+
+### （三）权利本位
+
     权利本位，即人民的利益是最高的法律，法治的最终目的不是别的，而是人民的利益、
     公民的权利。权利本位有三方面的含义：
     第一，国家权力源于公民权利，国家权力的行使以公民权利的实现为目的。
     第二，法律应该以人为本，以人文关怀为终极价值。
     第三，法律义务的设定以是否侵害他人的权利为前提。
 
-第三节 法的运行
+### 第三节 法的运行
 一、立法
 （一）立法概念
 立法，通常是指一定的国家机关依照法定的职权和法定程序【制定、修改和废止】法律和其
